--- a/_posts/JAVA/CodingTestWithJava/2024-03-22.Lv2.조건에맞는개발자찾기.md
+++ b/_posts/JAVA/CodingTestWithJava/2024-03-22.Lv2.조건에맞는개발자찾기.md
@@ -1,6 +1,6 @@
 
 
-
+Lv.2 짜리 sql은 쉽다고 느꼈는데, 이거 조내 어렵네
 
 
 select ID,EMAIL,FIRST_NAME,LAST_NAME from DEVELOPERS 
@@ -9,3 +9,9 @@ select ID,EMAIL,FIRST_NAME,LAST_NAME from DEVELOPERS
 where NAME in('C#','Python')
 
 order by id asc;
+
+
+
+-- 256
+select max(code) from skillcodes
+where 400 > code;
