--- a/_posts/Resume/last/2022-12-26-resume.md
+++ b/_posts/Resume/last/2022-12-26-resume.md
@@ -49,7 +49,7 @@ categories: resume
                 - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원
                 - 차세대 프로젝트 QA
             
-            - 퇴직사유 : 계약만료, 공공기관 특성 상 변화가 느리고, 위택스 차세대 개통이 미뤄지면서, 12월 정규직 전환 거절 및 3개월 연장 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
+            - 퇴직사유 : 계약만료, 공공기관 특성 상 변화가 느리고, 12월 정규직 전환 거절 및 3개월 연장 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
 
 
 # 학력
