--- a/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
@@ -72,7 +72,7 @@ pin: false
 |38|52|2023 12 13| [뽐뿌](https://www.jobkorea.co.kr/Recruit/GI_Read/43317169?Oem_Code=C1&sc=7) |벤처|웹개발|📤 서류제출|||
 |39|53|2023 12 09|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43401346?Oem_Code=C1&sc=7) |중소|선불 백엔드|📤 서류제출|||
 |-|54||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) |||❌ 미지원|||
-|40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|👨‍👨‍👦 1차 면접|||
+|40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|❌👨‍👨‍👦 1차 면접 탈락|||
 |-|52|2023 12 03|[가온그룹](https://www.jobkorea.co.kr/Recruit/GI_Read/43400719?Oem_Code=C1) |중견|임베디드|❌ 미지원|임베디드라서||
 |41|53|2023 12 03|[현대 이지웰](https://www.jobkorea.co.kr/Recruit/GI_Read/43416590?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=49) |대기업 계열사|웹개발자|❌📤 서류탈락|||
 |-|54|2023 12 03|[도쿄일렉트론코리아](https://tel.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163190) |외국계||❌ 미지원|||
@@ -93,7 +93,7 @@ pin: false
 |47|69|2023 12 31|[맥도날드](https://mcdonalds.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=128408) |대|주말알바| ⭐️ 합격|||
 |48|70||[지피티코리아]() |벹처|웹개발자|❌👨‍👨‍👦 1차 면접 미참석|제주도 여행||
 |49|71|2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴|❌📤 서류탈락|||
-|50|72|2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) |||📤 서류제출|시발 애네는 발표 메일 하나 안 보내주네 ㅅㅂㅋㅋㅋㅋㅋ 사이트 내에는 결과 있는데 시간 지나서 볼 수 가 없다.||
+|50|72|2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) |||❌📤 서류제출|시발 애네는 발표 메일 하나 안 보내주네 ㅅㅂㅋㅋㅋㅋㅋ 사이트 내에는 결과 있는데 시간 지나서 볼 수 가 없다.||
 |-|73|2023 12 18| [케이프투자증권](https://www.capefn.com/web/ir/HCD-020001.do) |||❌ 미지원|||
 |-|74|2023 12 18|[건국대](http://www.konkuk.ac.kr/do/Index.do) |공|전산(개발)|❌ 미지원|||
 |-|75|2023 12 23|[푸드나무 랭킹닭컴](https://www.jobkorea.co.kr/Recruit/GI_Read/43402500?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=1) |중소|자바 2년 경력|❌ 미지원|||
