--- a/_posts/Resume/last/2023-12-18-신협.md
+++ b/_posts/Resume/last/2023-12-18-신협.md
@@ -47,11 +47,13 @@
 
 ## 지원동기 및 입사 후 포부
 - 신협 무슨 회사야?
-- ❌
+- 
+[변화를 선도하는 기업]
+햄버거집 아르바이트를 하면서 나이가 있으신 분들은 키오스크 사용을 어려워 하신다는 점을 발견했습니다. 시대에 변화에 따라 신기술 도입도 중요하지만 사회 분위기에 맞는 기술의 변화가 필요하다고 생각합니다. 고령화 문제는 심각하고, 실제로 은행에서 종사하신 저희 아버지 조차 와이파이 연결도 어려워 하십니다. 신협은 국내 기업 금융 분야에 선도적인 기업으로, 금융업 최초로 바이오 인증을 도입하였으며, 최근에 온뱅크의 우수한 성능을 인정받아 수상을 받기도 하였습니다. 이처럼 IT분야에서 신협은 금융권에서 변화를 주도하는 기업으로 관심을 가지게되었습니다.
+이러한 일상 속에서 느꼈던 경험을 개발에 반영하여, 아버지가 종사했던 금융권, 그리고 그 IT 분야를 선도하는 신협에서 꿈을 펼쳐 고령화 같은 사회적 문제에 기여하고자 지원하였습니다.
 
+입사 후 꿈꾸는 모습은 변화의 주역입니다. 새로운 기술 도입이나 업무 프로세스 개선을 주도하여, 회사가 보다 빠르게 변화하는 시장 환경에 적응할 수 있도록 팀원들과 소통하여 문제를 해결해 나가고 싶습니다. 특히, 인공지능과 머신러닝을 활용한 데이터 분석 역량을 꾸준한 공부를 통해 갖추어 고객의 필요를 미리 파악하고 이를 개발에 반영하면서, 신협과 같이 성장하는 것을 목표로 하고 있습니다.
 
-
-입사 후 꿈꾸는 모습은 `변화의 주역`입니다. 새로운 기술 도입이나 업무 프로세스 개선을 주도하여, 회사가 보다 빠르게 변화하는 시장 환경에 적응할 수 있도록 팀원들과 소통하여 문제를 해결해 나가고 싶습니다. 특히, 인공지능과 머신러닝을 활용한 데이터 분석 역량을 꾸준한 공부를 통해 갖추어 고객의 필요를 미리 파악하고 이를 개발에 반영하면서, 신협과 같이 성장하는 것을 목표로 하고 있습니다.
 
 
 ## 자신을 어필할 수 있는 내용
