--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -13,10 +13,11 @@
 
 # 경력
     - 웹개발자 
-        - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스 개발팀
+        - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스개발팀
             1. 회사 정보
                 직원 수 : 536명/1200명
                 메츨액 : 1,509억 5,100만원
+                연봉 : 3204만원
 
             2. 당담 업무
                 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수 등 신입으로 들어갔다 보니 주로 법 개정이 적은 항목을 맡아 개발하였습니다.
@@ -35,10 +36,38 @@
                 - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원(기여도 40%)
                 - 2022.08.08~2022.08.23 지방세미리계산 재산세(세율특례) 계산식 기능 개편(기여도 100%)
                 - 2022.07.25~2022.08.10 지방세외수입 실명인증 기능 개발(기여도 100%)
-                
 
             5. 퇴직사유 
-            계약만료, SI와 공공기관 특성 상 책임감이 적고 변화가 느려, 12월 정규직 전환 거절 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
+                계약만료, SI와 공공기관 특성 상 책임감이 적고 변화가 느려, 정규직 전환 거절 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
+
+    - 프로젝트 교직원, 교내 수업 도우미
+        - 2020.10.27 ~ 2021.03.01 한국공학대학교(한국산업기술대학교) 교양교육센터(G동115호)
+            1. 회사 정보
+                직원 수 : 
+                메츨액 : 
+                연봉 : 2237만원
+
+            2. 당담 업무
+                코로나 시기에 프로젝트 계약직으로 뽑을 당시, 주 업무는 교수님 비대면 강의 환경 세팅과 강의 영상 편집이었으며, 교양교육센터(G동115호)에서 근로와 수업 도우미로 활동했습니다. 계약 기간이 끝난 이후에도 담당했던 수업의 교수님 아래에서 1년동안 수업 도우미로 활동했습니다.
+
+                코로나 시기에 프로젝트 계약직으로 뽑을 당시, 주 업무는 교수님 비대면 강의 환경 세팅과 강의 영상 편집이었으며, 교양교육센터(G동115호)에서 근로 학생을 병행하며 활동했습니다.
+
+            3. 수행 업무
+                - 파이썬(데이터 처리까지) 기반 수업 도우미.
+                - 라즈베리파이를 이용한 사물인터넷 실습 도우미.
+                - 수업의 진도를 위해 뒤처진 학생들 교육.
+                - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
+                - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
+                - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미 등
+                작성한 수업 외에도 계절학기 등 다수의 프로그래밍 기초 수업 도우미를 담당했습니다.
+
+            4. 업무 성과
+                교육 격차를 줄이고, 더 많은 학생들에게 질 높은 학습 기회를 제공하여 수업의 질를 높일 수 있었습니다.
+                IOT-인공지능-빅데이터 수업 도우미 참여 후, 에브리타임에서 작년 대비 수업 만족도 12% 증가한 것을 확인.
+                
+            5. 퇴직사유 
+                계약만료 및 졸업.
+
 
 
 # 학력
@@ -66,27 +95,42 @@
 
 
 # 기타
-    - 2023.10.06 빅데이터분석기사 필기 (한국데이터산업진흥원)❌
+    - 2023.10.07 빅데이터분석기사 필기 (한국데이터산업진흥원)❌
+    - 2022.07.24 ~ 2024.04.19(현재) 자격증 오픈채팅방 및 스터디 운영
+        네이버 카페, 수제비에서 정보처리기사 실기를 준비할 8명 인원을 구해 오픈채팅방 개설을 시작으로, 현재는 부방장으로 정보처리기사 및 다른 IT 자격증에 대한 정보를 공유하는 카카오톡 오픈채팅방 운영 중입니다.
+        - 2023.08.26 ~ 2023.10.06 빅데이터분석기사 스터디 운영
+            네이버 카페, 데이터전문가포럼에서 스터디 원을 구해 스터디장으로 한달 간, 이기적 책을 기반으로 스터디를 운영했습니다.
+
     - 2023.09.06 2종 보통 + 2종 소형 취득 (서울특별시경창청장 11-16-617186-51)
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
-    - 2023.04.17 SQLD 자격증취득 (한국데이터산업진흥원 SQLD-025000323)
-
+    - 2023.04.21 SQLD 자격증취득 (한국데이터산업진흥원 SQLD-025000323)
+        
     - 2022.11.25 ADSP(데이터분석준전문가) 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
-    
+    - 2022.10.24 ~ 2023.02.23 네이버커넥트, 부스트코스 코칭스터디 8~9기 수료.
+        - 2023.01.12 ~ 2023.02.23 네이버커넥트, 부스트코스 인공지능 기초 다지기 코칭스터디 9기 이수(6주)
+        - 2022.10.24 ~ 2022.11.24 네이버커넥트, 부스트코스 데이터 사이언스 코칭스터디 8기 이수(4주)
+        코칭스터디는 자기주도적 팀 학습을 기반으로 스케줄에 맞게 자유롭게 데이터 사이언스와 인공지능 강좌를 듣고, 매주 팀 프로젝트를 제공받고 토의하며, 코딩코치에게 실시간 피드백을 통해 문제를 해결하는 학습 과정입니다.
+
     - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
             빅데이터 플랫폼 기반 자바&파이썬 개발자 양성 과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
-
+ 
     - 2020.10.20 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 교내 수업 도우미
-        - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
-        - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
         - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
+        - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
+        - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
+
+    - 2021.03.02 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 21년도 1~2학기 신입생 상담 도우미(봉사장학)
+        신입생들의 자퇴를 막기 위해, 주기적으로 학생들과 담당 교수님들 사이에서 상담 일정을 조정해주고, 대화하며 보통 진로에 대한 고민을 들어주는 역할.
+
+    - 2020.10.01 ~ 2021.03.01 한국공학대학교(한국산업기술대학교) 프로젝트 교직원, 근로 학생
+        코로나 시기에 프로젝트 계약직으로 뽑을 당시, 주 업무는 교수님 비대면 강의 환경 세팅과 강의 영상 편집이었으며, 교양교육센터(G동115호)에서 근로 학생을 병행하며 활동했습니다.
 
     - 2019.10.27 ~ 2020.01.18 필리핀 바기오 어학연수
     - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상, 한국공학대학교(한국산업기술대학교)
 
 # 기술 스택
     중급 :
-        Spring(maven), Java, JQuery, JSTL, JavaScript, JSP, HTML,CSS, Markdown, Git, Linux(Rasbian), Oracle SQL
+         
     초급 :
         Spring boot(grandle) , DJango , React(Node.js), Python, XML, YAML, SVN
 
@@ -114,7 +158,7 @@
 
 
 # 프로젝트
-## 온라인 포트폴리오 웹사이트 (2023.03.24 - 2023.06.16)
+## 온라인 포트폴리오 웹사이트 (2023.03.24 - 2023.03.31)
         - 개인 프로젝트로 제작한 온라인 포트폴리오 웹사이트
         - 담당 업무 : Spring을 사용하여 프론트엔드 개발
         - 참고자료 : https://grokeen.github.io
