--- a/_posts/Resume/recent/2024-01-28-메리츠화제.md
+++ b/_posts/Resume/recent/2024-01-28-메리츠화제.md
@@ -4,8 +4,12 @@
 
 # 자기소개서
 ## 1.메리츠화재에 지원하게 된 동기 및 본인의 어떤 점이 메리츠화재의 기업문화와 닮았는지 성장과정을 토대로 소개해 주십시오. (400자 이상 600자 이내로 입력하세요) 
+- 440
+[아웃라이어, 메리츠화재]
+저의 기업 선택 기준은 기존의 시장에 만족하지 않고 계속된 노력으로 새로운 시장을 개척하는 추진력을 가진 기업입니다.
+메리츠화재는 다양한 상품을 선보이며 심지어 국내 펫 보험 관련하여 상당한 점유율을 가지고 있습니다. 이제는 자회사까지 새로운 도전을 통하여 초기 펫 헬스케어 산업 전반을 선도하는 기업입니다.
 
-
+햄버거집 아르바이트를 하면서 나이가 있으신 분들은 키오스크 사용을 어려워 하신다는 점을 발견했습니다. 시대에 변화에 따라 신기술 도입도 중요하지만 사회 분위기에 맞는 기술의 변화가 필요하다고 생각합니다. 고령화 문제는 심각하고, 실제로 은행에서 종사하신 저희 아버지 조차 와이파이 연결도 어려워 하십니다. 이러한 일상 속에서 느꼈던 경험을 개발에 반영하여, 인슈어테크 분야를 선도할 수 있게, 메리츠 화재에서 사회적 문제에 기여하고자 지원하였습니다.
 
 ## 2.지원분야의 직무 수행을 위해 준비해 온 과정 및 갖추고 있는 역량, 입사 후 계획에 대해 자유롭게 서술해 주십시오, (400자 이상 600자 이내로 입력하세요) 
 - 571
