--- a/_posts/Resume/recent/2024-02-26-하나은행티아이.md
+++ b/_posts/Resume/recent/2024-02-26-하나은행티아이.md
@@ -32,8 +32,6 @@
 
 제가 이전에 수행한 프로젝트들과 금융 기술에 대한 깊은 이해는 하나금융티아이의 목표를 실현하는데 중요한 자산이 될 것입니다. 하나금융티아이와 함께 성장하며, 디지털 금융의 새로운 장을 열어가고 싶습니다.
 
-
-
 - ChatGPT 2번 예시
 최근 글로벌 경제 동향과 통화 정책 변화의 복잡성을 이해하고, 이를 기술 개발과 혁신에 적용하고자 하는 저의 열정은 하나금융티아이에 지원하는 가장 큰 동기입니다. **글로벌 인플레이션 동향과 중앙은행의 금리 인상 조치, 그리고 이로 인한 화폐 가치 및 환율에 미치는 영향을 심층적으로 분석하는 과정**에서, **경제적 변화가 기술 산업, 특히 금융 IT 서비스**에 미치는 중대한 영향을 깊이 인식하게 되었습니다.
 
@@ -59,7 +57,7 @@
 - 998
 [신속한 학습과 적응력을 가진 개발자입니다.]
 공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 강점입니다.
-약점은 남들의 눈치를 많이 봅니다. 저는 배려라고 생각을 하지만 남들은 불안해 보인다고 합니다. 그러나 이러한 성격이 주변을 자주 살피게 되었고, 그로 분위기나 트랜드를 파악하는 능력이 생겼던 거 같습니다.
+약점은 남들의 눈치를 많이 봅니다. 저는 배려라고 생각을 하지만 남들은 불안해 보인다고 합니다. 그러나 이러한 성격이 주변을 자주 살피게 되었고, 그로 분위기나 트랜드를 파악하는 능력이 생겼습니다.
 
 이런 경험에서 얻은 강점과 약점을 적절하게 이용하여 회사에 보다 빠르게 적응해 성과를 이뤄내 나가겠습니다.
 
