--- a/_posts/Resume/recent/2024-03-10-에이비엘생명보험.md
+++ b/_posts/Resume/recent/2024-03-10-에이비엘생명보험.md
@@ -1,7 +1,7 @@
 
 
 # 취미
-
+오래된 물건을 구매하는 것이 취미고, 그것을 고치는 것이 특기입니다.
 
 # 자기소개서
 ## 1. ABL생명의 5대 핵심가치(배려, 든든함, 전문성, 스마트, 선진) 중 하나의 키워드를 활용하여 당사 지원 동기에 대해 작성해 주세요.(800)
