--- a/_posts/Resume/recent/2024-03-27-인천공항시설관리.md
+++ b/_posts/Resume/recent/2024-03-27-인천공항시설관리.md
@@ -3,7 +3,7 @@
 정보통신 / IT (일근) 분야로 지원 시 최종합격 후 T1/T2 등화환경사업소, 공항통신사업소, 보안교통사업소, 정보시스템사업소 등에 배치될 예정입니다.
 
 # 저가소개서
-## 입사지원서에 기술한 경험사항 또는 경력사항에 대해 상세히 기술해 주시기 바랍니다.
+## 입사지원서에 기술한 경험사항 또는 경력사항에 대해 상세히 기술해 주시기 바랍니다.2000자
 - 직무관련 '경험'사항 기술은 본인이 수행한 활동내용, 소속 조직이나 활동에서의 역할, 활동결과에 대해 구체적으로 작성해 주시기 바랍니다.
 - 직무관련 '경력'사항 기술은 직무영역, 활동/경험/수행 내용, 본인의 역할 및 활동, 주요성과에 대해 구체적으로 작성해 주시기 바랍니다.
 
@@ -16,9 +16,7 @@
 지방세 관련 SI 업무가 한국자금중개와 유사하다고 느꼈습니다. 이런 경험에서 얻은 강점과 약점을 적절하게 이용하여 회사에 보다 빠르게 적응해 성과를 이뤄내 나가겠습니다.
 
 
-
-
-## 여기부터 
+## 여기부터 대충 내용 이럼
 - 636
 지난 1년 간 메타넷디지털, 공공기관 SI에서 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
 
