--- a/_posts/Resume/recent/2024-04-07-우리캐피탈.md
+++ b/_posts/Resume/recent/2024-04-07-우리캐피탈.md
@@ -6,6 +6,8 @@
 
 # 프롲젝트 사항
 
+레이아웃을 분할하였고, 효율적인 정보전달을 위해, 전년도 세율을 우선적으로 선택해서 화면에 보일 수 있게 직관적으로 UI를, Javascript와 JSTL 문법으로 바인딩하여 기능 개선하였습니다.
+
 
 
 # IT ㅎ활용능력
@@ -58,4 +60,33 @@ JB우리캐피탈이 최근 수익성 개선을 위해 중고차금융, 기업·
 
 
 ## 경력기술서(3000)
+- 1465
+지난 1년 간 메타넷디지털, 공공기관 SI에서 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
 
+또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
+
+지난 메타넷디지털의 근무를 통해, 신입으로서 제가 가진 기술적 지식과 프로젝트 관리 경험을 활용하여, JB우리캐피탈의 금융 기술을 지원하고, 금융 시장에서의 경쟁력을 강화하는데 기여하고자 합니다. 제 경력과 성과가 JB우리캐피탈의 목표와 비전에 부합하는 중요한 자산이 될 것임을 확신합니다.
+
+2022.03.17 ~ 2023.03.17 메타넷 디지털(주)
+1. 당담 업무
+   부서 : 위택스 개발팀
+   웹개발자, 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수 등 신입으로 들어갔다 보니 
+   주로 법 개정이 적은 항목을 맡아 개발하였습니다.
+
+2. 수행 업무
+   - Spring을 활용한 컴포넌트 기반 개발(Eclipse, Jenkins, JDK 1.8 사용).
+   - HTML, CSS, JavaScript, JQuary, JSTL 등을 사용하여 UX 향상 및 웹 성능 최적화.
+   - Oracle DB와 ESB를 활용한 API 데이터 관리.
+   - SVN을 사용한 소스 코드 관리 및 협업.
+   - Windows 로컬 개발 환경과 WAS는 JEUS 사용.
+
+3. 업무 성과
+   - 2023.01.16~2023.01.30 레저세 안내 메세지 기능 개발(기여도 100%)
+   - 2022.12.21~2023.01.18 23년 법개정에 따른 주민세 사업소본 가산세 특례(면제) 기능 개편(기여도 20%)
+   - 차세대 프로젝트 QA
+   - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원(기여도 40%)
+   - 2022.08.08~2022.08.23 지방세미리계산 재산세(세율특례) 계산식 기능 개편(기여도 100%)
+   - 2022.07.25~2022.08.10 지방세외수입 실명인증 기능 개발(기여도 100%)
+
+4. 퇴직사유 
+   계약만료, SI와 공공기관 특성 상 책임감이 적고 변화가 느려, 12월 정규직 전환 거절 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
