--- a/_posts/JAVA/CodingTestWithJava/2024-03-21-그래프문법(BFS).md
+++ b/_posts/JAVA/CodingTestWithJava/2024-03-21-그래프문법(BFS).md
@@ -3,57 +3,7 @@
 
 
 
-# DFS (깊이 우선 탐색)
-DFS는 그래프의 깊은 부분을 우선적으로 탐색하는 방식입니다. 재귀 함수를 사용하거나 스택을 사용하여 구현할 수 있습니다. 다음은 재귀 함수를 사용한 DFS 구현 예시입니다.
-```java
-import java.util.*;
 
-public class Graph {
-    private LinkedList<Integer> adjLists[];
-    private boolean visited[];
-
-    // 그래프 생성자
-    Graph(int vertices) {
-        adjLists = new LinkedList[vertices];
-        visited = new boolean[vertices];
-
-        for (int i = 0; i < vertices; i++)
-            adjLists[i] = new LinkedList<Integer>();
-    }
-
-    // 간선 추가
-    void addEdge(int src, int dest) {
-        adjLists[src].add(dest);
-    }
-
-    // DFS 실행
-    void DFS(int vertex) {
-        visited[vertex] = true;
-        System.out.print(vertex + " ");
-
-        Iterator<Integer> it = adjLists[vertex].listIterator();
-        while (it.hasNext()) {
-            int adj = it.next();
-            if (!visited[adj])
-                DFS(adj);
-        }
-    }
-
-    public static void main(String args[]) {
-        Graph g = new Graph(4);
-
-        g.addEdge(0, 1);
-        g.addEdge(0, 2);
-        g.addEdge(1, 2);
-        g.addEdge(2, 0);
-        g.addEdge(2, 3);
-        g.addEdge(3, 3);
-
-        System.out.println("DFS 시작 (시작 노드: 2)");
-        g.DFS(2);
-    }
-}
-```
 
 
 
@@ -75,11 +25,15 @@ public class Graph {
             adj[i] = new LinkedList();
     }
 
-    // 간선 추가
+    // 간선 추가 , 여기까지는 모든 그래프가 동일하겠네, 인접 노드를 표시하는 거니까
     void addEdge(int v,int w) {
         adj[v].add(w);
     }
 
+
+
+
+    // ------------------------------------------
     // BFS 실행
     void BFS(int s) {
         boolean visited[] = new boolean[V];
@@ -92,10 +46,11 @@ public class Graph {
             s = queue.poll();
             System.out.print(s+" ");
 
+            // iterator가 반복해주는 애였나
             Iterator<Integer> i = adj[s].listIterator();
             while (i.hasNext()) {
                 int n = i.next();
-                if (!visited[n]) {
+                if (!visited[n]) { // 마킹, 노드를 지나갔으면 , true로 표시하네
                     visited[n] = true;
                     queue.add(n);
                 }
