--- a/_posts/JAVA/CodingTestWithJava/2024-03-24-❌S1.1931.md
+++ b/_posts/JAVA/CodingTestWithJava/2024-03-24-❌S1.1931.md
@@ -5,6 +5,7 @@
 회의실 배정
 ===
 
+[문제](https://www.acmicpc.net/problem/1931)
 
 # 문제
 한 개의 회의실이 있는데 이를 사용하고자 하는 N개의 회의에 대하여 회의실 사용표를 만들려고 한다. 
@@ -21,4 +22,7 @@
 ```
 📌 회의실 사용표룰 만들려는데, 시작하는 시간과 끝나는 시간 만 주어진다.
 📌 겹치지 않는 선에서 최대 개수 찾아라.
+📌 깊이우선탐색으로 풀면 될 거 같고 -> 아니네 그리디네 이거
 ```
+
+# 풀이
