--- a/_posts/Resume/last/2023-11-05-JYP.md
+++ b/_posts/Resume/last/2023-11-05-JYP.md
@@ -1,6 +1,7 @@
 
 
 [공고](https://recruit.jype.com/Recruit/Detail?Seq=707&Page=3&PageSize=12&RcTP=0&TempSaveST=False&ExpST=13&CampusST=0&State=0&SuppUseYN=False) 
+[이력서](https://recruit.jype.com/Recruit/ManageList)
 
 # 자기소개서
 ##  1. 'JYP'에 관심을 가지게 된 계기와 해당 직무에 지원하신 이유를 작성하시기 바랍니다. (1000자 이내)
@@ -39,14 +40,13 @@ Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 
 
 ## 4. 엔터테인먼트 산업과 'JYP'의 미래에 대한 자신의 생각을 작성하시기 바랍니다. (1000자 이내)
 
-[성공은 우연이 아니다.]
 개발자 관점에서 4차 산업혁명과 접목시켜 이야기 하자면, 세 가지가 있을 것 같습니다.
 첫 번째로 가상현실 처럼 스트리밍 서비스의 변화입니다.
-스트리밍 서비스, 소셜 미디어, VR 및 AR 같은 기술이 발전함에 따라, JYP는 이러한 플랫폼을 활용하여 팬들과의 상호작용을 강화하고 새로운 유형의 콘텐츠를 제공할 수 있습니다.
+스트리밍 서비스, 소셜 미디어, VR 및 AR 같은 기술이 발전함에 따라, JYP는 이러한 플랫폼을 활용하여 팬들과의 상호작용을 강화하고 새로운 유형의 콘텐츠를 제공할 수 있을 거 같습니다.
 
 두 번째, 빅데이터와 인공지능을 접목시킨 콘텐츠 제작이 입니다.
-빅데이터를 활용하여 팬들의 행동 패턴, 선호도 및 음악적 취향을 이해하고, 인공지능 기술이 음악과 콘텐츠 제작에 점점 더 많이 사용됨에 따라, JYP는 이 기술을 활용하여 새로운 형태의 음악을 창작하거나 효율적인 마케팅 전략을 개발할 수 있습니다.
+빅데이터를 활용하여 팬들의 행동 패턴, 선호도 및 음악적 취향을 이해하고, 인공지능 기술이 음악과 콘텐츠 제작에 점점 더 많이 사용됨에 따라, JYP는 이 기술을 활용하여 새로운 형태의 음악을 창작하거나 효율적인 마케팅 전략을 개발할 수 있을 거 같습니다.
 
 세 번째, 블록체인을 이용한 저작권 관리 입니다.
-블록체인은 저작권 등록과 관리를 투명하게 할 수 있는 능력을 제공함에 따라 무단 사용을 방지할 수 있습니다. 또는 아티스트의 작품을 NFT로 발행함으로서 디지털 소유권과 "한정판 콘텐츠"의 가치를 창출할 수 있습니다. 이는 팬들에게 독특한 수집 경험을 제공할 수 있습니다.
+블록체인은 저작권 등록과 관리를 투명하게 할 수 있는 능력을 제공함에 따라 무단 사용을 방지할 수 있습니다. 또는 아티스트의 작품을 NFT로 발행함으로서 디지털 소유권과 나이키 신발 같이 "한정판 콘텐츠"의 가치를 창출할 수 있습니다. 이는 팬들에게 독특한 수집 경험을 제공할 수 있을 거 같습니다.
 
