--- a/_posts/Resume/last/2023-11-27-인크로스.md
+++ b/_posts/Resume/last/2023-11-27-인크로스.md
@@ -1,7 +1,9 @@
 
 
-# 직무 관련 이수 과목명
+[공고](https://thecareers.sktelecom.com/Recruit/Detail/3939)
 
+# 직무 관련 이수 과목명
+- 2021.06.14 ~ 2021.11.18 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
 
 # 지원동기(500)
 [트렌드는 레트로와 빈티지]
@@ -15,14 +17,14 @@
 # 자신만의 차별화된 강점과 그로 인한 성취 경험(700)
 지난 회사를 다니면서 얻었던 개발할 때 중요하게 여기는 두 가지 요소가 있습니다.
 
-[첫 번쨰, 꼼꼼함 입니다.]
-지난 회사 같은 경우 소스코드를 수정을 하게 되면 업무진행 프로세스 절차에 따라 진행이 되는데, 단위 테스트와 통합 테스트 이후에 시큐어 코딩 단계가 있었습니다. 거기에 주로 걸렸던 보안 이슈는 XSS 입니다. 이 문제의 주된 원인은 선언하고 사용하지 않는 변수였습니다. 지방세 관련 공공기관이 그래도 돈을 다루는 부분이다 보니까 작은 논리적인 어떤 오류가 결국에는 사용자에게 피해를 끼칠 수 있습니다. 프로그램 적 스킬도 중요하지 만 좀 더 꼼꼼하게 볼 수 있어야 한다고 생각했고, 이러한 방식을 통하여 지난 회사에 기여했습니다.
+[첫 번째, 꼼꼼함입니다.]
+지난 회사 같은 경우 소스코드를 수정하게 되면 업무 진행 프로세스 절차에 따라 진행이 되는데, 단위 테스트와 통합 테스트 이후에 시큐어 코딩 단계가 있었습니다. 거기에 주로 걸렸던 보안 이슈는 XSS입니다. 이 문제의 주된 원인은 선언하고 사용하지 않는 변수였습니다. 지방세 관련 공공기관이 그래도 돈을 다루는 부분이다 보니까 작은 논리적인 어떤 오류가 결국에는 사용자에게 피해를 끼칠 수 있습니다. 프로그램적 스킬도 중요하지만 좀 더 꼼꼼하게 볼 수 있어야 한다고 생각했고, 이러한 방식을 통하여 지난 회사에 기여했습니다.
 
 이러한 경험들로, 개발자로서 이를 팀 프로젝트에 적용해, 팀원 간의 의견 조율이나 문제 해결을 원활하게 하여, 일정 관리에 기여할 수 있습니다. 또한 사용자의 요구 사항을 정확히 파악하고 이를 제품 개발에 반영하는 데에도 이 경험이 도움이 될 것입니다.
 
 
 # 단체 일원으로 협업을 진행한 경험과 역할, 기여도(700)
-[두 번째, 업무파악 입니다.]
+[두 번째, 업무파악입니다.]
 차세대 개발 지원으로 인해 팀원의 66%가 공석인 상황에서 무리 없이 대처한 경험이 있습니다.
 Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 평소에 SVN을 사용한 프로젝트 소스코드 관리 및 협업을 진행하였습니다. 22년 4분기에 차세대 개발 지원으로 팀원의 66%가 공석인 상황이 발생하게 되었습니다. 우선 공무원분들의 문의 전화가 오기 때문에 각 세목에 필요한 업무 파악하였고, 자주 발생하는 문제나 요구사항의 니즈를 파악하여 정리하였습니다. 먼저 리눅스를 활용해서 Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인하고, 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하였습니다. 이러한 경험으로 대규모 Spring 로직에 대한 트래픽 대처와 관련하여, 업무 파악의 중요성을 배우고, 시스템의 안정성과 응답 시간을 개선하는데 지난 회사에 기여했습니다.
 
