--- a/_posts/Resume/last/2023-12-03-아워홈.md
+++ b/_posts/Resume/last/2023-12-03-아워홈.md
@@ -467,7 +467,7 @@ CSS를 신경 많이 썼기 때문에 [사전과제 결과물](https://github.co
 그리고 대화를 해보니, 여성 분은 다른 테이블 사람과 아는 눈치였다. 보니까 스터디가 있다고 하더라???? 뭔 스터디가 다 있지 했더니 자소설닷컴? 거기서 구했단다.
 또 대화 도중에 알게 되었는데, 오늘은 성이 'ㄱ'인 사람 만 있었다. 와,,,, 얼마나 많이 1차 합격시킨 걸까,,,, 그럼 'ㄱ'으로 시작하는 개발직 만, 7테이블? 28명? 정도?
 
-면접은 두 명씩 들어가는 방식이고, 들어갈 때, 먼저 들어간 사람이 "차렷, 인사" 하고 앉으라고 한다. 그런건 좀 귀엽더라.
+면접은 두 명씩 들어가는 방식이고, 다대다 면접으로 진행된다. 들어갈 때, 먼저 들어간 사람이 "차렷, 인사" 하고 앉으라고 한다. 그런건 좀 귀엽더라.
 
 강당 같은 곳 말고, 2차적으로 대기해야 하는 곳이 또 있었다. 결과는 1월 말에, 2차 면접은 2월 초에, 입사는 2월 중순에 알려준다고 했다.
 
@@ -502,6 +502,10 @@ CSS를 신경 많이 썼기 때문에 [사전과제 결과물](https://github.co
 
 #### 추가 질문
 다시 자리에 착석했다. 그 뒤로 질문이 들어왔지만 "자신있는 언어", "상황 질문"이랑 "ppt 추가 내용", 아 그리고 개똥쌌던 "AI면접에서 했던 대답들 관련"해서 물어보더라 마지막으로 "물어보고 싶은 거 있냐" 이정도 였다. 금방 끝났다. 매우 아쉬웠다.
+- ppt 추가 내용(어려웠던 점? 이런 거)
+- 자신있는 언어
+- 상황 질문
+- 물어보고 싶은 거 있냐
 
 면접은 30분에서 40분 정도 소모했던 거 같다.
 
