--- a/_posts/Resume/last/2023-12-18-농협캐피탈.md
+++ b/_posts/Resume/last/2023-12-18-농협캐피탈.md
@@ -98,7 +98,7 @@
 차세대 개발 지원으로 인해 팀원의 66%가 공석인 상황에서 무리 없이 대처한 경험이 있습니다.
 Spring을 사용하는 지방세 관련 공공기관 SI에서 근무할 당시, 평소에 SVN을 사용한 프로젝트 소스코드 관리 및 협업을 진행하였습니다. 22년 4분기에 차세대 개발 지원으로 팀원의 66%가 공석인 상황이 발생하게 되었습니다. 우선 공무원분들의 문의 전화가 오기 때문에 각 세목에 필요한 업무 파악하였고, 자주 발생하는 문제나 요구사항의 니즈를 파악하여 정리하였습니다. 먼저 리눅스를 활용해서 Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인하고, 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하였습니다. 이로서 업무 파악의 중요성을 배우고, 시스템의 안정성과 응답 시간을 개선하는데 지난 회사에 기여했습니다.
 
-이러한 경험은 개발자로서 팀 프로젝트에 적용했을때, 팀원 간의 의견 조율이나 문제 해결을 원활하게 하여, 일정 관리에 기여했습니다. 또한 사용자의 요구 사항을 정확히 파악하고 이를 제품 개발에 반영하는 데에도 도움이 된 경험이 있습니다.
+이러한 경험은 개발자로서 팀 프로젝트에서 팀원 간의 의견 조율이나 문제 해결을 원활하게 하여, 일정 관리에 기여했습니다. 또한 사용자의 요구 사항을 정확히 파악하고 이를 제품 개발에 반영하는 데에도 도움이 된 경험입니다.
 
 
 
