--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -28,6 +28,13 @@
 |9|17|2024 02 18|[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) |중견|관리부분 IT(web), 경남 근무|❌🤖 AI역량검사 미응시|AI영어 면접과 PT면접을 두 번 보고 사전과제를 또 봐야한다. 이후에는 면접 2회, 합숙 면접? 있단다. 참 어려운 회사다.||
 |-|18|2024 02 18|[LS ITC](https://lsitc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170694) |대|IT/클라우드 인턴|❌ 미지원|게으름||
 |10|19|2024 02 19|[리딩투자증권](https://www.kofia.or.kr/brd/m_96/view.do?seq=28238&srchFr=&srchTo=&srchWord=&srchTp=&multi_itm_seq=0&itm_seq_1=0&itm_seq_2=0&company_cd=&company_nm=&page=1) ||IT개발(웹) |❌📤 서류탈락|||
+
+
+1/10 서합
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |-|20|2024 02 22|[오케이몰](https://www.okmall.com/company/recruit) ||시스템 개발팀 웹 개발자 경력 3년|❌ 미지원|전략기획팀이 있긴 한데,오바다.||
 |11|21|2024 02 21|[웅진](https://woongjinit-recruiter.career.greetinghr.com/o/101060) |중견||❌📤 서류탈락|포트폴리오 제출이 있던데 그거 안해서 그런가?||
 |12|22|2024 02 26|[하나금융티아이](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170506) |대|IT금융|❌📤 서류탈락|||
@@ -48,9 +55,15 @@
 |-|37|2024 03 18|[삼성생명]() |대|금융IT, 오픽IL|❌ 미지원|영어성적||
 |-|38|2024 03 18|[삼성증권]() |대|IT|❌ 미지원|영어성적||
 |-|39|2024 03 18|[삼성화재해상보험]() |대|IT|❌ 미지원|영어성적||
-|18|40|2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직|🗒️ NCS 필기 시험|||
-|19|41|2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|신입-IT|❌🖥️ 코딩테스트 탈락|||
-|20|42|2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영|📤 서류제출|||
+|18|40|2024 03 13|[경기신용보증재단](https://gcgf1.saramin.co.kr/service/gcgf1/2866/applicant/apply/recruit_default.asp) ||전산직|❌🗒️ NCS 필기 시험 불합|13점 차로?||
+|19|41|2024 03 13|[한국자금중개](https://kmb.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=173416)|대|신입-IT|❌🖥️ 코딩테스트 탈락|2문제 만 풀고 2문제는 못풀었음||
+|20|42|2024 03 17|[우리에프아이에스](https://woorifis.careerlink.kr/) |대|IT개발/운영|❌📤 서류 탈락|이건 뭐 희망연봉에 3300만원 적었는데 떨어진 거 보면ㅋㅋㅋ||
+
+2/10
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |-|43|2024 03 17|[라이나생명보험](https://linakorea.career.greetinghr.com/) ||보험 데이터분석, 경력 1년|❌ 미지원|||
 |-|44|2024 03 18|[소프트웨어공제조합](https://www.ksfc.or.kr/ksfch610.do) |공|전산직|❌ 미지원|아 시발 어학성적 필수로 해놨네????? 다 적었는데 미친련이;;;; 공고에 안 적혀있는데,,,,||
 |-|45|2024 03 18|[한국표준협회](https://ksa.recruitlab.co.kr/) ||사내 IT 시스템 기획 및 운영|❌ 미지원|석사나 경력 5년||
@@ -79,7 +92,7 @@
 |23|68|2024 03 29|[한화손해보험](https://www.hanwhain.com/web/index.do) ||15시, IT 개발|📤 서류제출|||
 |24|69|2024 03 31, 상시|[코웨이](https://cowayhr.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=149171) ||it 1~3지망 프론트,백,데이터|📤 서류제출|||
 |-|70|2024 03 31|[휴네시온](https://hunesion.com/kor/recruit/content4?viewMode=view&ca=&sel_search=&txt_search=&page=1&idx=301) ||프론트엔드, 상시||||
-|-|71|2024 03 31|[세종공업](https://recruit.sjku.co.kr/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템 유지보수, 용인 근무||||
+|-|71|2024 03 31|[세종공업](https://recruit.sjku.co.kr/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템 유지보수, 용인 근무|❌ 미지원|||
 |25|72|2024 03 31|[행복나래](https://happynarae.saramin.co.kr/apply_site/apply/view_resume) ||it|❌📤 서류탈락|||
 |-|73|2024 03 31|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21239530?compcd=30007)|대|재무시스템 운영[백화점IS팀 ]|❌ 미지원|||
 |-|74|2024 03 31|[용마로지스](https://yongmalogis.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=174517) |IT|정보전략,물류시스템 운영|❌ 미지원|||
@@ -87,30 +100,80 @@
 |26|76|2024 05 15|[SKY Hospitality Group](https://www.jobkorea.co.kr/Recruit/GI_Read/44212318?Oem_Code=C1&logpath=1&stext=%ED%95%B4%EC%99%B8%EA%B7%BC%EB%AC%B4&listno=7) |외국계|소프트웨어 엔지니어|📤 서류제출|||
 |-|77|2024 04 01| [kink](https://company.kinx.net/career/#s05)||시스템엔지니어||||
 |-|78|2024 04 01|[디와이그룹](https://www.saramin.co.kr/zf_user/jobs/relay/pop-view?rec_idx=47824329&t_ref=main&t_ref_content=platinum_fix_expand) ||시스템엔지니어링|❌ 미지원|||
-|-|79|2024 03 29|[단군소프트](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44205983?Oem_Code=C1&productType=VVIP&logpath=0) ||데브옵스|서류제츨|||
-|27|80|2024 03 29|[코스트코코리아](https://www.catch.co.kr/NCS/RecruitInfoDetails/394657) |||❌📤 문의메일 전송 거절|||
-|28|81|2024 04 03|[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||시스템엔지니어|📤 서류제출|||
+|27|79|2024 03 29|[단군소프트](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44205983?Oem_Code=C1&productType=VVIP&logpath=0) ||데브옵스|📤 서류제출|||
+|28|80|2024 03 29|[코스트코코리아](https://www.catch.co.kr/NCS/RecruitInfoDetails/394657) |||❌📤 문의메일 전송 거절|||
+|29|81|2024 04 03|[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||관측업무|❌👨‍👨‍👦 1차 면접 탈락|||
+|-|82|2024 04 04| [한국마사회]()||시스템 개발|❌ 미지원|||
+|30|83|2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|📤 서류제출|||
 
-|||2024 04 04| [한국마사회]()||시스템 개발|❌ 미지원|||
-|||2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|📤 서류제출|||
-|||2024 04 07|[더케이교직원나라]() |||❌ 미지원|||
-|||2024 04 08|[대한무역투자진흥공사](https://kotra.careerlink.kr/jobs/RC20240319003897) |||❌ 미지원|||
 
-----|||2024 04 08|[새마을금고중앙회](https://www.kfcc.co.kr/recruit/rec0095.do) ||||||
+1/10 서합
 
-|||2024 04 08|[한국무역보험공사]() ||it(전산학)||||
-|||2024 04 12|[한국피앤지](https://www.pgcareers.com/apac/en/search-results?keywords=%22(P%26G%20Summer%20Internship)%22) |중견|IT||||
 
-----|||2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(금융)||||
-|||2024 04 14|[안랩](https://ahnlab.recruiter.co.kr/appsite/company/index) ||||||
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|-|84|2024 04 07|[더케이교직원나라]() |||❌ 미지원|||
+|-|85|2024 04 08|[대한무역투자진흥공사](https://kotra.careerlink.kr/jobs/RC20240319003897) |||❌ 미지원|영어||
+|-|86|2024 04 08|[새마을금고중앙회](https://www.kfcc.co.kr/recruit/rec0095.do) |||❌ 미지원|다 작성했는데 시간초과 1분 차이로;;;; 아니 마우스가 없어가지고 하 복붙만 하면 되는데||
+|-|87|2024 04 08|[한국무역보험공사]() ||it(전산학)|❌ 미지원|영어||
+|-|88|2024 04 09|[한국석유공사]() ||6급 IT|❌ 미지원|||
+|-|89|2024 04 12|[한국피앤지](https://www.pgcareers.com/apac/en/search-results?keywords=%22(P%26G%20Summer%20Internship)%22) |중견|IT|❌ 미지원|영어 면접||
+|31|90|2024 04 30|[해커스어학원](https://www.jobkorea.co.kr/Recruit/GI_Read/44345007?Oem_Code=C1&sc=15) ||React 모바일|📤 서류제출|||
+|32|91|상시|[야놀자](https://careers.yanolja.co/o/105535) ||소트웨어엔지니어, 채용연계형|❌ 미지원|||
+|33|92|잡코리아 포지션 제안|[티맥스가이아](https://tmaxcareers.ninehire.site/job_posting/bv8sZRQq) ||기술지원 엔지니어|❌📤 서류 탈락|뭐지???? 포션 제안 너가 했잖아||
+|34|93|상시|[Paymentwall](https://www.jobkorea.co.kr/Recruit/GI_Read/44020490?Oem_Code=C1) |외국계|인텔리전스 엔지니어|📤 서류제출|||
+|35|94|2024 05 04|[소프트위즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44149759?Oem_Code=C1) |중소|암호화페 관련 웹개발자|📤 서류제출|||
+|36|95|2024 04 15|[알서포트](https://www.jobkorea.co.kr/Recruit/GI_Read/44432006?Oem_Code=C1) |중소|백엔드|📤 서류제출|||
+|37|96|2024 04 22|[한일소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44417626?Oem_Code=C1) |중견|웹/앱|📤 서류제출|||
+|38|97|2024 04 30|[KS신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/44416261?Oem_Code=C1) |중견|자바|📤 서류제출|||
+|39|98|2024 06 07|[한국능률협회컨설팅](https://www.jobkorea.co.kr/Recruit/GI_Read/44417155?Oem_Code=C1) |중견|자바 경력|📤 서류제출|||
+|-|99|2024 04 14|[AXA손해보험]() ||데이터사이언스|❌ 미지원|||
+|40|99|2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(해외출장)|📤 서류제출|||
+|-|100|2024 04 14|[메리츠증권](https://meritz.applyin.co.kr/jobs/12919) ||법인파생영업팀, 차익거래 주문관리시스템 고도화 개발|❌ 미지원|||
 
-----|||2024 04 15|[한화생명]() ||||||
-----|||2024 04 15| [현대캐피탈](https://hcs.recruiter.co.kr/career/jobs/17477)||||||
+
+
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|41|101|2024 05 03|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/44378748?Oem_Code=C1&sc=54&gno=44378748) |중소||📤 서류제출|||
+|-|102|2024 04 15|[한화생명](https://www.recruit-hanwhalife.co.kr/kor/index.html) ||IT개발|❌ 미지원|||
+|-|103|2024 04 15| [현대캐피탈](https://hcs.recruiter.co.kr/career/jobs/17477)||IT, Clould|❌ 미지원|||
+|-|104|2024 04 14|[안랩](https://ahnlab.recruiter.co.kr/appsite/company/index) ||웹개발, 코테||||
+|-|105|2024 04 14|[미원상사]() ||SW개발_잉크테크 안산본사, c 개발자|❌ 미지원|||
+|-|106|2024 04 14|[오스템임플란트](https://osstem.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=177422) ||이커머스, 경력 3년|❌ 미지원|||
+|-|107|2024 04 15|[한국환경공단](https://keco.applyin.co.kr/jobs/12651) |||❌ 미지원|||
+|||상시|[롯데바이오로직스](https://lottebiologics.career.greetinghr.com/o/82231) ||인프라/보안 구축 , 인재DB등록(필요할 때, 인재한테 연락 주겠다.) ||||
+|||2024 04 17|[하나금융TI]() ||컴퓨터 비전 인턴||||
 |||2024 04 18|[인천관광공사]() ||7급 정보통신||||
+
+|||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 항공 데이터 업무용 시스템 개발||||
+|||2024 04 20|[보험개발원]() ||IT업무||||
+|||2024 04 21|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
+
+|||2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문||||
+
+|||2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션||||
+
+|||2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||ux/ui 5400만원의 자신감||||
+|||2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||||||
+
+|||2024 04 22|[DGB생명보험]() ||IT직군||||
+|||2024 04 22| [한국재정정보원]()||||||
+|||2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||디지털추진기획||||
+
+|||2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발||||
+|-||2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
+
+|||2024 04 25|[삼아알미늄]() ||IT||||
+|||2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발||||
+|||2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS||||
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) ||라눅스 인프라개발 및 운영 부문||||
 
+|||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695) ||리눅스 인프라 개발 및 운영 부문||||
 
-
+|||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
 
 # 상시
 |||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
@@ -119,24 +182,14 @@
 |||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
 |||상시|[아마존웹서비스](https://amazon.jobs/en/jobs/2549983/cloud-support-associate-ireland) ||Cloud Support Associate (Ireland 아일랜드 근무)||||
 |||상시|[티맥스티베로](https://tmaxcareers.ninehire.site/) ||웹서비스 프론트엔드 연구원||||
-|||상시|[야놀자](https://careers.yanolja.co/o/105535) ||소트웨어엔지니어, 채용연계형||||
 
 
 
 
 
-
-
-|||| [한국무역통신]()||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
-|||| ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
