--- a/_posts/Resume/recent/2024-03-27-금융결제원.md
+++ b/_posts/Resume/recent/2024-03-27-금융결제원.md
@@ -24,8 +24,8 @@
 
 ## 금융결제원이 제공하는 서비스를 이용해본 경험과 느낀점을 기술하시오.[600자 이상 850자 이내]
 - 서비스 이용 경험과 느낀점?
-
-
+[금융인증서]
+지난 회사에서 외부망 전용 컴퓨터에 일일히 공인인증서를 옮기기 번거로웠는데, 금융인증서로 쉽게 핸드폰 만 있으면 가능하다는 부분이 편리했습니다. 금융인증서의 도입은 디지털 금융 환경에서 개발자와 사용자 모두에게 새로운 기회를 제공한다고 생각합니다. 보안과 편의성이라는 두 가지 중요한 요소를 균형 있게 만족시키며, 금융 서비스의 접근성과 이용률을 증가시키는 것입니다. 이처럼 금융인증서는 금융 서비스의 미래를 재정의하는 중요한 열쇠로 자리매김하고 있습니다.
 
 ## [전산직] 채용공고 상 직무 수행을 위한 본인의 강점 및 노력(프로젝트 경험 등)을 구체적으로 기술하시오.(프로그램 개발언어 사용능력 등 기술적 설명 포함)[600자 이상 850자 이내]
 - 498
