--- a/_posts/Resume/recent/2024-04-03-농협정보시스템.md
+++ b/_posts/Resume/recent/2024-04-03-농협정보시스템.md
@@ -9,6 +9,10 @@
 또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
 
 
+
+
+
+
 # 자기소개서(각 400자)
 ## 자신의 성격에 기술장점과 단점을 기술하세요.
 - 356
@@ -16,7 +20,8 @@
 공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 강점입니다. 약점은 남들의 눈치를 많이 봅니다. 저는 배려라고 생각을 하지만 남들은 불안해 보인다고 합니다. 그러나 이러한 성격이 주변을 자주 살피게 되었고, 그로 분위기나 트랜드를 파악하는 능력이 생겼습니다.
 
 ## 자신이 보유한 핵심역량을 기술하시고, 우리 회사 어떤 부분에 기여 할 수 있는지 기술하세요.
-제 핵심역량은 야간 및 주간 당직 근무 중 발생할 수 있는 다양한 시스템 문제에 신속하고 효율적으로 대응할 수 있는 능력과 전산배치 작업을 자동화하여 운영 효율성을 개선한 경험입니다. 이러한 역량을 바탕으로, 농협정보시스템의 IT 인프라 관리와 시스템 운영의 안정성을 높이는 데 기여할 수 있습니다. 또한, 제가 개발한 자동화 스크립트와 모니터링 도구는 회사의 IT 운영 효율성을 향상시키고, 장애 대응 시간을 단축하는 데 도움이 될 것입니다.
+- 202
+제 핵심역량은 공공기관 SI에서 근무 경험으로 얻은 상황대처 능력입니다. 야간 및 주간 당직 근무 중 발생할 수 있는 다양한 시스템 문제에 신속하고 효율적으로 대응할 수 있는 능력과 전산배치 작업을 자동화하여 운영 효율성을 개선할 수 있습니다. 이러한 역량을 바탕으로, 농협정보시스템의 IT 인프라 관리와 시스템 운영의 안정성을 높이는 데 기여할 수 있습니다. 
 
 ## 대표적인 성공 및 실패 사례와 이를 실현 및 극복하기 위해 어떤 일을 했는지 기술하세요.
 - 383
@@ -24,5 +29,129 @@
 대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 저는 야간 대학교를 나와 주간 수업에는 참여할 수 없습니다. 그러나 주변 교직원분들의 추천으로 수업 도우미로서 참여할 수 있게 되었고, 이후에는 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시킬 수 있었습니다. 그 과정에서 교수님과 진로 방향에 대한 많은 이야기를 했으며, 그 정보를 통해 국비지원 교육과 자격증으로 스스로를 성장시킬 수 있었습니다. 지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다.
 
 ## 우리회사의 지원동기와 입사 후 목표 및 실현계획을 구체적으로 기술하세요.
-제 지원동기는 농협정보시스템에서의 야간 및 주간 당직 근무 경험과 전산배치 자동화 운영을 통해 농업과 농촌 경제에 IT 솔루션을 제공하는 데 기여하고 싶어서입니다. 입사 후에는 첫 1년 동안 기술 지식을 확장하고, 이어서 전산 운영의 효율성을 높이기 위한 자동화 도구 개발에 착수할 계획입니다. 팀과 협력하여 전산배치 프로세스를 최적화하고, 실시간 모니터링 시스템을 강화하여 시스템 안정성을 높이는 것이 목표입니다.
+- 223
+지원동기는 농협정보시스템에서의 야간 및 주간 당직 근무 경험과 전산배치 자동화 운영을 통해 농업과 농촌 경제에 IT 솔루션을 제공하는데 기여하고 싶습니다.  더 나아가 웹개발 경험을 살려, 전산 운영의 효율성을 높이기 위한 개발에 착수하고 싶습니다. 또한 실시간 모니터링 시스템을 강화하여 시스템 안정성을 높이고, IT 운영 효율성을 향상시켜, 장애 대응 시간을 단축하는 데 도움이 될 것입니다.
 
+
+
+
+
+
+
+
+
+
+# 인적성
+아이디는 이름, 비밀번호는 
+230 문항 정도, 얼굴을 까진 않았다. 그러나 뭔가 여성 차별이나, 씹꼰대 느낌이 난다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 면접
+팀워크 경험
+프로젝트 관리
+문제 해결 사례
+전문 기술과 기술 스택
+학습과 자기개발
+리더십 및 책임감
+시간 관리 능력
+미래 계획 및 목표
+
+
+## 자기소개
+안녕하세요. 아워홈에 지원한, 
+'신속한 학습과 적응력'을 가진 개발자 김용록입니다. 
+
+학교나 국비지원 교육에서 했던 다양한 개발 경험과
+스스로 자격증 공부를 통해, 
+실무에서 직면할 수 있는 다양한 문제를 
+해결하는 방법을 배웠습니다.
+
+실제로 1년간 회사에 근무하면서 이를 접목시켜 
+팀원들과 소통을 원할하게 한 경험이 있습니다.
+
+이러한 경험을 바탕으로 (------)의 업무에 보다 빠르게 적응해서 
+회사에 기여할 수 있을 거 같아 지원하게 되었습니다.
+
+
+## 뭐하는 회사 같냐?
+농협중앙회, 지역농협, 농협계열사, 농림수산 관련기관, 시중 금융기관 등의 시스템 개발, 시스템 유지보수 사업을 영위하는 농협중앙회의 자회사.
+
+
+----
+
+## 가치관
+직업은 개인의 역량과 관심을 사회적으로 기여할 수 있는 방법으로 전환하는 수단이라고 생각합니다.
+
+## 지원동기
+지원동기는 농협정보시스템에서의 야간 및 주간 당직 근무 경험과 
+전산배치 자동화 운영을 통해 농업과 농촌 경제에 IT 솔루션을 제공하는데 기여하고 싶습니다.  
+
+더 나아가 웹개발 경험을 살려, 전산 운영의 효율성을 높이기 위한 개발에 착수하고 싶습니다. 
+또한 실시간 모니터링 시스템을 강화하여 시스템 안정성을 높이고, 
+IT 운영 효율성을 향상시켜, 장애 대응 시간을 단축하는데 도움이 될 것입니다.
+
+
+
+
+
+## 장단점 
+[신속한 학습과 적응력을 가진 개발자입니다.]
+공공기관 SI에서 다양한 코드 분석과 촉박한 개발 기간 동안 결과물을 가져와야 했던 근무 경험이 있습니다. 
+이러한 경험을 바탕으로 누군가가 저를 가르치는 인력을 줄일 수 있으며, 스스로 소스코드를 분석하고 파악하여, 업무에 보다 빠르게 적응할 자신이 있습니다. 
+
+신입으로서 작게나마 인력 소비를 줄여, 기술적 해결책을 제공함으로서, 사용자 만족도에 보다 빠르게 기여하는게 제 현실적 강점입니다. 
+
+약점은 남들의 눈치를 많이 봅니다. 저는 배려라고 생각을 하지만 남들은 불안해 보인다고 합니다. 그러나 이러한 성격이 주변을 자주 살피게 되었고, 그로 분위기나 트랜드를 파악하는 능력이 생겼습니다.
+
+
+
+### 왜 웹개발이 아니고?
+[지방세 웹개발 경험에서 사용자에게 안정적인 서비스 제공을 위해 튼튼한 인프라가 필수적임을 경험했습니다.]()
+
+
+----
+
+
+## 핵심 역량
+제 핵심역량은 공공기관 SI에서 근무 경험으로 얻은 상황대처 능력입니다. 야간 및 주간 당직 근무 중 발생할 수 있는 다양한 시스템 문제에 신속하고 효율적으로 대응할 수 있는 능력과 전산배치 작업을 자동화하여 운영 효율성을 개선할 수 있습니다. 이러한 역량을 바탕으로, 농협정보시스템의 IT 인프라 관리와 시스템 운영의 안정성을 높이는 데 기여할 수 있습니다. 
+
+
+----
+
+
+## 성공했던 경험이나 (나는 대충 적다 보니 성장과정을 적어버렸네)
+아버지가 가정을 책임지는 모습을 지켜보며, 성인이 된 이후에는 이런 보살핌에 보답하고자 스스로 점진적으로 목표를 세워 변화를 주게 되었습니다.
+대학교에서 근로로 참여해 책임감을 가지고 일에 임하였습니다. 저는 야간 대학교를 나와 주간 수업에는 참여할 수 없습니다. 그러나 주변 교직원분들의 추천으로 수업 도우미로서 참여할 수 있게 되었고, 이후에는 수업의 질을 올리기 위해 최선을 다한 결과 교수님을 만족시킬 수 있었습니다. 그 과정에서 교수님과 진로 방향에 대한 많은 이야기를 했으며, 그 정보를 통해 국비지원 교육과 자격증으로 스스로를 성장시킬 수 있었습니다. 지난 경험에서 책임감을 가지고 일을 끝까지 해낸다면, 인정을 받고 추천되어, 더 많은 기회가 주어진다는 것을 배웠습니다.
+
+
+### 수업도우미 썰
+[조교로 참여하여, 수업 만족도 12% 증가]
+대학교에서 근로학생으로 근무하던 중 게임공학과 교수님이 사물 인터넷 실습 수업 진행 시, 학생들이 수업에 대한 불만으로 도우미를 구하시고 계시다는 소식을 접하였고, 수업 도우미로 참여할 수 있었습니다.
+
+우선 갈등의 중간 지점을 찾기위해 학생들이 원하는 수업 방식을 가벼운 대화를 통해 니즈를 파악하였더니, 교수님과 마찬가지로 진도에 대한 불만이 많았습니다. 진도를 위해 뒤처진 학생들을 맡았으며, 교육 격차를 줄이고, 더 많은 학생들에게 질 높은 학습 기회를 제공하여 수업의 질를 높일 수 있었습니다. 결과적으로 전년 대비 수업 만족도 12% 증가한 것을 확인하였습니다.
+
+
+# 면접 후기
+뭐랄까 아져씨들이다. 끝나고 나 보고 어려보인다더라? 몇 살이신데요? 물어보니까 한 살 차이ㅋㅋㅋ
+40대와 29살 나는 28살.
+
+다 무슨 암울한 인생을 살다가 왔다 신기하더라. 스토리텔링이 엄청났다. 근데 내용이 정말 절박함을 느낄 수 있는 내용이다.
+
+- 20대 중반에 아버지 돌아가시고 어머니 쓰러지고, 강원도 고향에서 막노동하다가 정신 차리고 다른 회사에 입사해서 근무하다가 큰 회사로 오고싶어서 ㄷㄷㄷ
+- 다른 한 분도 전문대 졸업하고 인프라에서 1년 정도 일하고, 고향으로 내려가서 많이 벌 수 있는 용접 4년 하다가 왔단다.
+
+그리고 인프라인줄 알았는데 관측업무라더라. 사실 뭔지 모른다. 둘이 똑같은 거 아닌가.
+희망 연봉 4천 적었는데, 많단다. 얼마 정도 하는지 모르겠다. 일단 뭐 대충 가능하다고 했는데 모른다.
+파워쉘에서 스크립트 짤 줄아는 거 뭐있냐는데, 뭔 소리인 줄 몰라서 리눅스 했던 경험들 말했다. 근데 표정들이 아닌가 보더라ㅋㅋ
