--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -85,11 +85,11 @@
 |-|61|2024 03 27|[IBK기업은행](https://ibk.incruit.com/hire/viewhire.asp?projectid=118) ||14시 , IT, 코딩테스트|❌ 미지원|||
 |-|62|2024 03 27|[KDB산업은행](https://kdb.incruit.com/hire/viewhire.asp?projectid=103) ||16시, 디지털IT ,필기시험|❌ 미지원|||
 |-|63|2024 03 27|[금융결제원](https://kftc.or.kr/kftc/main/EgovkftcHubMain.do) ||17시,전산직 |❌ 미지원|||
-|22|64|2024 03 27|[인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1025) ||18시, 정보총신/IT(일근/교대),기사이상소지|📤 서류제출||
+|22|64|2024 03 27|[인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1025) ||18시, 정보총신/IT(일근/교대),기사이상소지|❌📤 서류탈락||
 |-|65|2024 03 27|[AXA손해보험](https://axa.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=175387) ||24시 , 자사운용 시스템 관리|❌ 미지원|개발직이 아닌 거 같은데?||
 |-|66|2024 03 27|[조선비츠](https://apply.chosunbiz.com/notice-detail.html?noticeId=2) ||코틀린, 안드로이드|❌ 미지원|코틀린||
 |-|67|2024 03 27|[법무법인태평양](https://recruit.bkl.co.kr/announcement/noticeView.do?noticeNo=86) |||전산(보안,운영)|❌ 미지원||
-|23|68|2024 03 29|[한화손해보험](https://www.hanwhain.com/web/index.do) ||15시, IT 개발|📤 서류제출|||
+|23|68|2024 03 29|[한화손해보험](https://www.hanwhain.com/web/index.do) ||15시, IT 개발|❌📤 서류탈락|4월 18일에 알려주냐 무슨||
 |24|69|2024 03 31, 상시|[코웨이](https://cowayhr.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=149171) ||it 1~3지망 프론트,백,데이터|📤 서류제출|||
 |-|70|2024 03 31|[휴네시온](https://hunesion.com/kor/recruit/content4?viewMode=view&ca=&sel_search=&txt_search=&page=1&idx=301) ||프론트엔드, 상시||||
 |-|71|2024 03 31|[세종공업](https://recruit.sjku.co.kr/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템 유지보수, 용인 근무|❌ 미지원|||
@@ -104,7 +104,7 @@
 |28|80|2024 03 29|[코스트코코리아](https://www.catch.co.kr/NCS/RecruitInfoDetails/394657) |||❌📤 문의메일 전송 거절|||
 |29|81|2024 04 03|[농협정보시스템](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=66355) ||관측업무|❌👨‍👨‍👦 1차 면접 탈락|||
 |-|82|2024 04 04| [한국마사회]()||시스템 개발|❌ 미지원|||
-|30|83|2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|📤 서류제출|||
+|30|83|2024 04 07|[JB우리캐피탈](https://wooricap.saramin.co.kr/apply_site/recruit/view) ||IT 인프라|❌📤 서류탈락|||
 
 
 1/10 서합
@@ -123,7 +123,7 @@
 |33|92|잡코리아 포지션 제안|[티맥스가이아](https://tmaxcareers.ninehire.site/job_posting/bv8sZRQq) ||기술지원 엔지니어|❌📤 서류 탈락|뭐지???? 포션 제안 너가 했잖아||
 |34|93|상시|[Paymentwall](https://www.jobkorea.co.kr/Recruit/GI_Read/44020490?Oem_Code=C1) |외국계|인텔리전스 엔지니어|📤 서류제출|||
 |35|94|2024 05 04|[소프트위즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44149759?Oem_Code=C1) |중소|암호화페 관련 웹개발자|📤 서류제출|||
-|36|95|2024 04 15|[알서포트](https://www.jobkorea.co.kr/Recruit/GI_Read/44432006?Oem_Code=C1) |중소|백엔드|📤 서류제출|||
+|36|95|2024 04 15|[알서포트](https://www.jobkorea.co.kr/Recruit/GI_Read/44432006?Oem_Code=C1) |중소|백엔드|❌📤 서류 탈락|||
 |37|96|2024 04 22|[한일소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44417626?Oem_Code=C1) |중견|웹/앱|📤 서류제출|||
 |38|97|2024 04 30|[KS신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/44416261?Oem_Code=C1) |중견|자바|📤 서류제출|||
 |39|98|2024 06 07|[한국능률협회컨설팅](https://www.jobkorea.co.kr/Recruit/GI_Read/44417155?Oem_Code=C1) |중견|자바 경력|📤 서류제출|||
@@ -132,7 +132,7 @@
 |-|100|2024 04 14|[메리츠증권](https://meritz.applyin.co.kr/jobs/12919) ||법인파생영업팀, 차익거래 주문관리시스템 고도화 개발|❌ 미지원|||
 
 
-
+0/10
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
@@ -144,24 +144,30 @@
 |-|105|2024 04 14|[미원상사]() ||SW개발_잉크테크 안산본사, c 개발자|❌ 미지원|||
 |-|106|2024 04 14|[오스템임플란트](https://osstem.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=177422) ||이커머스, 경력 3년|❌ 미지원|||
 |-|107|2024 04 15|[한국환경공단](https://keco.applyin.co.kr/jobs/12651) |||❌ 미지원|||
-|||상시|[롯데바이오로직스](https://lottebiologics.career.greetinghr.com/o/82231) ||인프라/보안 구축 , 인재DB등록(필요할 때, 인재한테 연락 주겠다.) ||||
-|||2024 04 17|[하나금융TI]() ||컴퓨터 비전 인턴||||
-|||2024 04 18|[인천관광공사]() ||7급 정보통신||||
-
-|||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 항공 데이터 업무용 시스템 개발||||
-|||2024 04 20|[보험개발원]() ||IT업무||||
-|||2024 04 21|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
-
-|||2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문||||
-
-|||2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션||||
-
-|||2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||ux/ui 5400만원의 자신감||||
-|||2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||||||
-
-|||2024 04 22|[DGB생명보험]() ||IT직군||||
+|-|108|상시|[롯데바이오로직스](https://lottebiologics.career.greetinghr.com/o/82231) ||인프라/보안 구축 , 인재DB등록(필요할 때, 인재한테 연락 주겠다.) ||||
+|-|109|2024 04 17|[하나금융TI]() ||컴퓨터 비전 인턴|❌ 미지원|||
+|-|110|2024 04 18|[인천관광공사]() ||7급 정보통신|❌ 미지원|||
+|-|111|2024 04 20|[보험개발원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404020004204&handle=89C25F86B4B87AB86BF01EEF2A46D592F688F3353F63B5669965B4443468A3CA&rf=1) ||IT업무|❌ 미지원|||
+|42|112|2024 06 14|[더캐리](https://www.jobkorea.co.kr/Recruit/GI_Read/44459279?Oem_Code=C1&sc=15) |중소|웹개발|이커머스 웹|📤 서류제출||
+|43|113|상시|[카페,만월경](https://www.jobkorea.co.kr/Recruit/GI_Read/44383201?Oem_Code=C1&logpath=1&stext=next.js&listno=12) |중소|코틀린|📤 서류제출|||
+|-|114|2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문,서버 프로그래밍|❌ 미지원|13시 마감||
+|-|115|2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션|❌ 미지원|||
+|-|116|2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||17시까지 |❌ 미지원|블록체인,데사,보안,AI||
+|44|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군||||
 |||2024 04 22| [한국재정정보원]()||||||
-|||2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||디지털추진기획||||
+
+|||2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획||||
+|||2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
+
+
+|||2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) ||||||
+|||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 경력, 항공 데이터 업무용 시스템 개발||||
+
+
+
+|||2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||||||
+|||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
+
 
 |||2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발||||
 |-||2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
@@ -172,7 +178,7 @@
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) ||라눅스 인프라개발 및 운영 부문||||
 
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695) ||리눅스 인프라 개발 및 운영 부문||||
-
+|||2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
 |||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
 
 # 상시
@@ -185,8 +191,13 @@
 
 
 
-
-
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
