--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -118,26 +118,28 @@
 |-|87|2024 04 08|[한국무역보험공사]() ||it(전산학)|❌ 미지원|영어||
 |-|88|2024 04 09|[한국석유공사]() ||6급 IT|❌ 미지원|||
 |-|89|2024 04 12|[한국피앤지](https://www.pgcareers.com/apac/en/search-results?keywords=%22(P%26G%20Summer%20Internship)%22) |중견|IT|❌ 미지원|영어 면접||
-|31|90|2024 04 30|[해커스어학원](https://www.jobkorea.co.kr/Recruit/GI_Read/44345007?Oem_Code=C1&sc=15) ||React 모바일|📤 서류제출|||
+|31|90|2024 04 30|[해커스어학원](https://www.jobkorea.co.kr/Recruit/GI_Read/44345007?Oem_Code=C1&sc=15) ||React 모바일|📤 서류제출 💀기업명 다르게 제출|||
 |32|91|상시|[야놀자](https://careers.yanolja.co/o/105535) ||소트웨어엔지니어, 채용연계형|❌ 미지원|||
-|33|92|잡코리아 포지션 제안|[티맥스가이아](https://tmaxcareers.ninehire.site/job_posting/bv8sZRQq) ||기술지원 엔지니어|❌📤 서류 탈락|뭐지???? 포션 제안 너가 했잖아||
-|34|93|상시|[Paymentwall](https://www.jobkorea.co.kr/Recruit/GI_Read/44020490?Oem_Code=C1) |외국계|인텔리전스 엔지니어|📤 서류제출|||
-|35|94|2024 05 04|[소프트위즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44149759?Oem_Code=C1) |중소|암호화페 관련 웹개발자|📤 서류제출|||
-|36|95|2024 04 15|[알서포트](https://www.jobkorea.co.kr/Recruit/GI_Read/44432006?Oem_Code=C1) |중소|백엔드|❌📤 서류 탈락|||
-|37|96|2024 04 22|[한일소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44417626?Oem_Code=C1) |중견|웹/앱|📤 서류제출|||
-|38|97|2024 04 30|[KS신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/44416261?Oem_Code=C1) |중견|자바|📤 서류제출|||
-|39|98|2024 06 07|[한국능률협회컨설팅](https://www.jobkorea.co.kr/Recruit/GI_Read/44417155?Oem_Code=C1) |중견|자바 경력|📤 서류제출|||
+|33|92|잡코리아 포지션 제안|[티맥스가이아](https://tmaxcareers.ninehire.site/job_posting/bv8sZRQq) ||기술지원 엔지니어|❌📤 서류 탈락 💀기업명 다르게 제출|뭐지???? 포션 제안 너가 했잖아??? ㅅㅂ 내잘못||
+|34|93|상시|[Paymentwall](https://www.jobkorea.co.kr/Recruit/GI_Read/44020490?Oem_Code=C1) |외국계|인텔리전스 엔지니어|📤 서류제출 💀기업명 다르게 제출|||
+|35|94|2024 05 04|[소프트위즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44149759?Oem_Code=C1) |중소|암호화페 관련 웹개발자|📤 서류제출 💀기업명 다르게 제출|||
+|36|95|2024 04 15|[알서포트](https://www.jobkorea.co.kr/Recruit/GI_Read/44432006?Oem_Code=C1) |중소|백엔드|❌📤 서류 탈락 💀기업명 다르게 제출|이해간다 그래,,,,||
+|37|96|2024 04 22|[한일소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44417626?Oem_Code=C1) |중견|웹/앱|📤 서류제출 💀기업명 다르게 제출|||
+|38|97|2024 04 30|[KS신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/44416261?Oem_Code=C1) |중견|자바|📤 서류제출 💀기업명 다르게 제출|||
+|39|98|2024 06 07|[한국능률협회컨설팅](https://www.jobkorea.co.kr/Recruit/GI_Read/44417155?Oem_Code=C1) |중견|자바 경력|📤 서류제출 💀기업명 다르게 제출|||
 |-|99|2024 04 14|[AXA손해보험]() ||데이터사이언스|❌ 미지원|||
 |40|99|2024 04 14|[코오롱베니트](https://dream.kolon.com/RECRUIT_KOLON/hr/rec/recruit/main/controller/candidate/MainRecruitWebController/init.hr) ||시스템개발(해외출장)|📤 서류제출|||
 |-|100|2024 04 14|[메리츠증권](https://meritz.applyin.co.kr/jobs/12919) ||법인파생영업팀, 차익거래 주문관리시스템 고도화 개발|❌ 미지원|||
 
 
 0/10
+- 아 진짜 김ㅎㄱ이 하던직 내가 하고 있네 어휴 ㅣㅅ하ㅣㅁㅎ루마닐afdklsandkfl 
+좀 잘해보려고 쓰던게 왠지 80퍼 붙는다고 생각한 기업들이 대거 탈락하더라 기업명을 틀려서 적냐 이 병시나 자기혐오 올라오네
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-|41|101|2024 05 03|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/44378748?Oem_Code=C1&sc=54&gno=44378748) |중소||📤 서류제출|||
+|41|101|2024 05 03|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/44378748?Oem_Code=C1&sc=54&gno=44378748) |중소||📤 서류제출|💀기업명 다르게 제출||
 |-|102|2024 04 15|[한화생명](https://www.recruit-hanwhalife.co.kr/kor/index.html) ||IT개발|❌ 미지원|||
 |-|103|2024 04 15| [현대캐피탈](https://hcs.recruiter.co.kr/career/jobs/17477)||IT, Clould|❌ 미지원|||
 |-|104|2024 04 14|[안랩](https://ahnlab.recruiter.co.kr/appsite/company/index) ||웹개발, 코테||||
@@ -148,28 +150,24 @@
 |-|109|2024 04 17|[하나금융TI]() ||컴퓨터 비전 인턴|❌ 미지원|||
 |-|110|2024 04 18|[인천관광공사]() ||7급 정보통신|❌ 미지원|||
 |-|111|2024 04 20|[보험개발원](https://job.incruit.com/jobdb_info/jobpost.asp?job=2404020004204&handle=89C25F86B4B87AB86BF01EEF2A46D592F688F3353F63B5669965B4443468A3CA&rf=1) ||IT업무|❌ 미지원|||
-|42|112|2024 06 14|[더캐리](https://www.jobkorea.co.kr/Recruit/GI_Read/44459279?Oem_Code=C1&sc=15) |중소|웹개발|이커머스 웹|📤 서류제출||
-|43|113|상시|[카페,만월경](https://www.jobkorea.co.kr/Recruit/GI_Read/44383201?Oem_Code=C1&logpath=1&stext=next.js&listno=12) |중소|코틀린|📤 서류제출|||
-|-|114|2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문,서버 프로그래밍|❌ 미지원|13시 마감||
+|42|112|2024 06 14|[더캐리](https://www.jobkorea.co.kr/Recruit/GI_Read/44459279?Oem_Code=C1&sc=15) |중소|웹개발|이커머스 웹|📤 서류제출 💀기업명 다르게 제출||
+|43|113|상시|[카페,만월경](https://www.jobkorea.co.kr/Recruit/GI_Read/44383201?Oem_Code=C1&logpath=1&stext=next.js&listno=12) |중소|코틀린|📤 서류제출 💀기업명 다르게 제출|||
+|-|114|2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문,서버 프로그래밍|❌ 미지원|13시 마감|||
 |-|115|2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션|❌ 미지원|||
 |-|116|2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||17시까지 |❌ 미지원|블록체인,데사,보안,AI||
-|44|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군||||
-|||2024 04 22| [한국재정정보원]()||||||
+|44|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군|한글파일을 볼 수 가 없다.|||
+||118|2024 04 22| [한국재정정보원]()|||❌ 미지원|||
+||119|2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획|❌ 미지원|||
+||120|2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
+||121|2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) |중소|개발자 Java|📤 서류제출|||
 
-|||2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획||||
-|||2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
-
-
-|||2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) ||||||
 |||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 경력, 항공 데이터 업무용 시스템 개발||||
-
-
-
 |||2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||||||
 |||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
 
+|||2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발, 7개월 기간제||||
 
-|||2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발||||
+
 |-||2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
 
 |||2024 04 25|[삼아알미늄]() ||IT||||
@@ -179,6 +177,9 @@
 
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695) ||리눅스 인프라 개발 및 운영 부문||||
 |||2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
+|||2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||||||
+|||2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||||||
+
 |||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
 
 # 상시
@@ -191,9 +192,8 @@
 
 
 
-||||[]() ||||||
-||||[]() ||||||
-||||[]() ||||||
+||||[카페24](https://www.cafe24corp.com/recruit/jobs) ||||||
+
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
