--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -155,20 +155,18 @@
 |-|114|2024 04 21|[NH선물](http://ir.futures.co.kr/ir/Getcontent.do?content=4000012) ||IT부문,서버 프로그래밍|❌ 미지원|13시 마감|||
 |-|115|2024 04 21|[셀트리온](https://recruit.celltrion.com/main/recruit/46_3/index.jsp) ||어플리케이션|❌ 미지원|||
 |-|116|2024 04 22|[NH농협은행](https://nhbank2024.saramin.co.kr/service/nhbank2024/index.asp) ||17시까지 |❌ 미지원|블록체인,데사,보안,AI||
-|44|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군|한글파일을 볼 수 가 없다.|||
-||118|2024 04 22| [한국재정정보원]()|||❌ 미지원|||
-||119|2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획|❌ 미지원|||
-||120|2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
-||121|2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) |중소|개발자 Java|📤 서류제출|||
+|-|117|2024 04 22|[DGB생명보험](https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=47980337&view_type=search) ||18시, IT직군|한글파일을 볼 수 가 없다.|||
+|-|118|2024 04 22| [한국재정정보원]()|||❌ 미지원|||
+|-|119|2024 04 22|[우리금융저축은행](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44448512?Oem_Code=C1) ||24시, 1년차 ,디지털추진기획|❌ 미지원|||
+|-|120|2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
+|44|121|2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) |중소|개발자 Java|📤 서류제출|||
+|45|122|2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발, 7개월 기간제|📤 서류제출|||
+|-|123|2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
 
 |||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 경력, 항공 데이터 업무용 시스템 개발||||
 |||2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||||||
 |||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
 
-|||2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발, 7개월 기간제||||
-
-
-|-||2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
 
 |||2024 04 25|[삼아알미늄]() ||IT||||
 |||2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발||||
