--- a/_posts/Github/README.md/2023-10-05-README.md
+++ b/_posts/Github/README.md/2023-10-05-README.md
@@ -3,7 +3,7 @@ layout: content
 title:  "[Github] 깃허브 README 포트폴리오로 수정해 보기"
 date:   2023-10-04 12:45:29 +0900
 categories: Github
-pin: true
+pin: false
 ---
 
 
