--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -162,16 +162,19 @@
 |44|121|2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) |중소|개발자 Java|📤 서류제출|||
 |45|122|2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발, 7개월 기간제|📤 서류제출|||
 |-|123|2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
+|||2024 04 25|[삼아알미늄]() ||IT||||
+
 
 |||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 경력, 항공 데이터 업무용 시스템 개발||||
 |||2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||||||
 |||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
 
 
-|||2024 04 25|[삼아알미늄]() ||IT||||
+
 |||2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발||||
 |||2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS||||
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) ||라눅스 인프라개발 및 운영 부문||||
+
 
 |||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695) ||리눅스 인프라 개발 및 운영 부문||||
 |||2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
@@ -192,7 +195,7 @@
 
 ||||[카페24](https://www.cafe24corp.com/recruit/jobs) ||||||
 
-||||[]() ||||||
+|||2024 05 07|[선진]() ||웹개발||||
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
