--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -138,6 +138,12 @@
 
 
 # 취미/특기 그리고 가치관
+- 자격증 공부, 신기술 및 최근 뉴스 찾아보기
+- 봤을 때, 궁금한 부분이 있으면 간단한 실습해보는 것이 특기입니다.
+
+
+
+## 23년 하반기
     - 취미 : 오래된 것을 구매
     - 특기 : 고쳐서 사용하는 것이 특기입니다.
     - 좌우명 :
