--- a/_posts/JAVA/CodingTestWithJava/2024-04-29-B3.별찍기7.md
+++ b/_posts/JAVA/CodingTestWithJava/2024-04-29-B3.별찍기7.md
@@ -1,9 +1,12 @@
 
 
 
+[출처](https://www.acmicpc.net/problem/2444)
 
 
-```
+# 
+
+```java
 import java.util.Scanner;
 
 public class Main {
@@ -31,3 +34,4 @@ public class Main {
 	}
 }
 ```
+
