--- a/_posts/Resume/recent/2024-01-11-24년이력서.md
+++ b/_posts/Resume/recent/2024-01-11-24년이력서.md
@@ -40,6 +40,11 @@
             5. 퇴직사유 
                 계약만료, SI와 공공기관 특성 상 책임감이 적고 변화가 느려, 정규직 전환 거절 후, 다양한 개발 경험을 얻고자 나오게 되었습니다.
 
+            6. 경력기술서
+                지난 1년 간 메타넷디지털, 공공기관 SI에서 웹개발자로 근무하며, 저는 공공기관 금융 기술 분야에서 중요한 경험을 쌓고 다수의 성공적인 프로젝트를 이끌었습니다. 신입으로 들어갔기 때문에 지방세외수입, 레저세, 지역자원시설세 등 주로 법 개정이 적은 항목을 담당하여 개발 및 유지보수를 진행하였습니다. 특히, 지방세외수입에 고객정보를 가지고 있는 API를 활용한 실명인증 기능 개발과 재산세(세율특례) 자동계산기 기능 개선 프로젝트에서 주도적인 역할을 맡아, 고객사의 만족도를 향상시키면서, 회사의 경쟁력을 강화하는데 기여했습니다.
+
+                또한 공무원분들의 시스템적 문의가 오기 때문에 각 세목에 필요한 업무를 숙지하고, 리눅스를 활용하여, Web Log 데이터를 모니터링 하거나 DB에 값이 제대로 들어갔는지 확인했습니다. 문제 발견 시에는 SQL 쿼리를 작성하여 실행 권한이 있는 상급자에게 부탁하거나 소스코드를 개선하여 해결하는 업무를 맡았습니다.
+
     - 프로젝트 교직원, 교내 수업 도우미
         - 2020.10.27 ~ 2021.03.01 한국공학대학교(한국산업기술대학교) 교양교육센터(G동115호)
             1. 회사 정보
@@ -69,6 +74,7 @@
                 계약만료 및 졸업.
 
 
+----
 
 # 학력
     - 2013.03.04 ~ 2016.02.03 동안고등학교
@@ -83,9 +89,12 @@
             학년 별 학점 : 3.33/3.42 3.33/3.25 3.7/3.67 3.7/4
             수강 과목(자바기초,자바응용 4.5/4.5)
 
+        - 학위번호 : 12022-004119
+
         - 계열 : 공학 계열/공학사
         - 단과대 : 기업인재대학
 
+----
 
 # 병역
     - 2018.01.30 ~ 2019.09.30 육군 2사단 만기 전역
@@ -93,19 +102,34 @@
         - 소대 통신병으로 통신 장비를 다뤄 본 경험이 있습니다. 
         - 선임 그리고 분대장으로써 책임감과 리더쉽을 배울 수 있었습니다.
 
+----
+
 
 # 기타
     - 2023.10.07 빅데이터분석기사 필기 (한국데이터산업진흥원)❌
-    - 2022.07.24 ~ 2024.04.19(현재) 자격증 오픈채팅방 및 스터디 운영
+    - 2022.07.24 ~ 2024.04.30(현재) 자격증 오픈채팅방 및 스터디 운영
         네이버 카페, 수제비에서 정보처리기사 실기를 준비할 8명 인원을 구해 오픈채팅방 개설을 시작으로, 현재는 부방장으로 정보처리기사 및 다른 IT 자격증에 대한 정보를 공유하는 카카오톡 오픈채팅방 운영 중입니다.
         - 2023.08.26 ~ 2023.10.06 빅데이터분석기사 스터디 운영
             네이버 카페, 데이터전문가포럼에서 스터디 원을 구해 스터디장으로 한달 간, 이기적 책을 기반으로 스터디를 운영했습니다.
 
+## 백수의 개인 프로젝트
+    - 2023.12.29 ~ 2024.01.03 React를 이용한 이커머스 장바구니 기능 토이 프로젝트(기여도 100%)
+    - 2023.05.27 ~ 2023.06.03 Chat GPT를 활용한 영어 회화 기능 토이 프로젝트(기여도 100%, 담당 업무 : Open AI API 활용)
+    - 2023.04.24 ~ 2023.04.28 라즈베리파이를 이용한 OMV 개인 NAS 서버 구축
+    - 2023.03.24 ~ 2023.03.31 Github 블로그를 이용한 온라인 포트폴리오 웹사이트(기여도 100%, 담당 업무 : Git, Markdown, Liquid 문법과 YAML Front Matter 활용)
+
+    - 2021.11.18 ~ 2021.12.10 Spring Framework을 이용한 적성평가 후, 업무역량에 맞는 인사분류 웹 사이트(기여도 33%, 한국공학대학교(한국산업기술대학교), 담당 업무 : MVC 패턴 View, DB 설계, 프로젝트의 전반적인 서포터)
+    - 2021.10.24 ~ 2021.11.17 Django를 이용한 초보 개발자 이력서/자소서 도움 사이트(기여도 50%, KIC 캠퍼스, 담당 임무 : 웹 크롤링, 데이터 수집, Django, 프론트엔드)
+    - 2021.08.30 ~ 2021.09.23 Spring 프레임워크를 이용한 음식점 예약 웹 사이트(기여도 40%, KIC 캠퍼스, 담당 업무 : 프론트엔드, 예약 기능 구현)
+
+## 자격증
     - 2023.09.06 2종 보통 + 2종 소형 취득 (서울특별시경창청장 11-16-617186-51)
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
     - 2023.04.21 SQLD 자격증취득 (한국데이터산업진흥원 SQLD-025000323)
         
     - 2022.11.25 ADSP(데이터분석준전문가) 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
+
+## 교육
     - 2022.10.24 ~ 2023.02.23 네이버커넥트, 부스트코스 코칭스터디 8~9기 수료.
         - 2023.01.12 ~ 2023.02.23 네이버커넥트, 부스트코스 인공지능 기초 다지기 코칭스터디 9기 이수(6주)
         - 2022.10.24 ~ 2022.11.24 네이버커넥트, 부스트코스 데이터 사이언스 코칭스터디 8기 이수(4주)
@@ -114,9 +138,11 @@
     - 2021.06.14 ~ 2021.11.18 KIC 캠퍼스, 실무 프로젝트 기반 빅데이터 플랫폼 개발 및 분석 전문가 양성 과정 교육 이수
             빅데이터 플랫폼 기반 자바&파이썬 개발자 양성 과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
  
+## 교내 경험
     - 2020.10.20 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 교내 수업 도우미
         - 2021.11.02 ~ 2021.12.21 사물인터넷을 품은 미래사회 수업 도우미
         - 2021.09.28 ~ 2021.12.08 프로그래밍 기초(파이썬) 비교과 수업 도우미
+        - 2021.06.28 ~ 2021.07.09 프로그래밍 기초(Python) 계절학기 비대면 수업 도우미
         - 2020.10.20 ~ 2020.12.15 IOT-인공지능-빅데이터 수업 도우미
 
     - 2021.03.02 ~ 2021.12.21 한국공학대학교(한국산업기술대학교) 21년도 1~2학기 신입생 상담 도우미(봉사장학)
@@ -128,20 +154,28 @@
     - 2019.10.27 ~ 2020.01.18 필리핀 바기오 어학연수
     - 2017.11.24 제12회 교내 KPU 소프트웨어 경진 대회 입상, 한국공학대학교(한국산업기술대학교)
 
+----
+
 # 기술 스택
+    고급 :
+
+        Mac , Window
+        
     중급 :
-         
+
+        Linux, Spring, Oracle SQL, Git, Java, JavaScript, JSP, JSTL, JQuary, CSS, HTML, AJax, Markdown
+
     초급 :
-        Spring boot(grandle) , DJango , React(Node.js), Python, XML, YAML, SVN
+
+        DJango , React, SVN, Docker, Python, XML, YAML
 
 
+----
 
 
 # 취미/특기 그리고 가치관
 - 자격증 공부, 신기술 및 최근 뉴스 찾아보기
-- 봤을 때, 궁금한 부분이 있으면 간단한 실습해보는 것이 특기입니다.
-
-
+- 궁금한 부분이 있으면 간단하게 실습해보는 것이 특기입니다.
 
 ## 23년 하반기
     - 취미 : 오래된 것을 구매
@@ -161,6 +195,7 @@
 
         사람이기 때문에 컴퓨터 서버처럼 누구도 제 안에 들어 올 수 없습니다. 파일을 수정할 수 있는 건 결국 자신 뿐이라고 생각합니다. 인생도 마찬가지로 자기 생각을 실천하는 것은 어렵기 때문에, 그것을 개발하려는 열정과 노력이 없다면 작은 것 하나 바꿀 수 없습니다. 그래서 실천하고, 도전하며 행동하는 것이 다양한 경험을 얻을 수 있어 가장 중요하다고 생각합니다. 롯데정보통신은 새로운 사람들과 협력하며, 경험을 통해 새로운 저를 만들어 갈 수 있는 인생에 몇 없는 좋은 기회라고 생각합니다.
 
+----
 
 
 # 프로젝트
