--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -161,27 +161,108 @@
 |-|120|2024 04 22|[비나우](https://benow.career.greetinghr.com/o/87391) ||24시, ux/ui 5400만원의 자신감||||
 |44|121|2024 04 22|[엠큐닉](https://www.jobkorea.co.kr/Recruit/GI_Read/44291214?Oem_Code=C1&sc=15) |중소|개발자 Java|📤 서류제출|||
 |45|122|2024 04 23|[sc제일은행, 스탠다드차드은행](https://standardchartered.saramin.co.kr/apply_site/recruit/view) ||경력 2년 ,HR IT 시스템 개발, 7개월 기간제|📤 서류제출|||
-|-|123|2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발||어학성적||
-|||2024 04 25|[삼아알미늄]() ||IT||||
+|-|123|2024 04 24| [한국무역통신](https://jrs.jobkorea.co.kr/ktnet/ktnet24/Agi/Invite)||SW 개발|❌ 미지원|어학성적||
+|-|124|2024 04 25|[삼아알미늄]() ||IT|❌ 미지원|||
+|-|125|2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발|❌ 미지원|||
+|-|126|2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS|❌ 미지원|||
+|46|127|2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) |대|라눅스 인프라개발 및 운영 부문|📤 서류제출|||
+|-|128|2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발|❌ 미지원|||
+|47|129|상시|[컴투스](https://com2us.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180246) ||산후대체, 웹개발|📤 서류제출|||
+|48|130|2024 05 24|[좋은생각](https://www.jobkorea.co.kr/Recruit/GI_Read/44541625?Oem_Code=C1) |중소|리액트 경력|📤 서류제출|||
+|49|131|2024 05 02|[메가스터디교육](https://www.jobkorea.co.kr/Recruit/GI_Read/44393033?Oem_Code=C1) ||공무원 웹개발자|📤 서류제출|||
+|50|132|2024 05 15|[크래디트나인](https://www.jobkorea.co.kr/Recruit/GI_Read/44458763?Oem_Code=C1) |중소|금융 SI|❌👨‍👨‍👦 1차 면접 미참석|||
+
+1/10
+암 검사하느라 정말 정신 없이 지냈음. 
 
 
-|||상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||웹개발자, 경력, 항공 데이터 업무용 시스템 개발||||
-|||2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||||||
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|51|133|상시|[티웨이항공](https://recruit.twayair.com/WiseRecruitWeb/) ||2년 경력, 계약직 IT 행정지원|📤 서류제출|||
+|52|134|2024 05 17|[케이지이니시스](https://www.jobkorea.co.kr/Recruit/GI_Read/44479447?Oem_Code=C1&sc=15) ||결제 서비스|📤 서류제출|||
+|53|135|2024 05 16|[한일네트워크](https://www.jobkorea.co.kr/Recruit/GI_Read/44609695?Oem_Code=C1) ||경력 3년, 웹개발자|📤 서류제출|||
+|54|136|2024 06 23|[BCD](https://www.jobkorea.co.kr/Recruit/GI_Read/44539587?Oem_Code=C1) |중소|이커머스, 경력1년|📤 서류제출|||
+|55|137|2024 05 10|[동국시스템즈](https://www.jobkorea.co.kr/Recruit/GI_Read/44581737?Oem_Code=C1&sc=7) |중견|웹개발자, 내부시스템|📤 서류제출|||
+|56|138|상시|[DB FIS](https://www.jobkorea.co.kr/Recruit/GI_Read/44189056?Oem_Code=C1&sc=7) ||경력 2년 |📤 서류제출|||
+|57|139|2024 05 03|[에스엠 하이플러스](https://www.jobkorea.co.kr/Recruit/GI_Read/44557239?Oem_Code=C1&sc=7) ||금융 전산|📤 서류제출|||
+|58|140|2024 05 03|[이지케어택](https://www.jobkorea.co.kr/Recruit/GI_Read/44490489?Oem_Code=C1&sc=7) ||의료 sw|📤 서류제출|||
+|59|141|2024 05 30|[넷엔드](https://www.jobkorea.co.kr/Recruit/GI_Read/44580939?Oem_Code=C1&sc=7) ||자바|📤 서류제출|||
+|60|142|2024 05 30|[코페이](https://www.jobkorea.co.kr/Recruit/GI_Read/44576486?Oem_Code=C1&sc=7) ||자바|📤 서류제출|||
+
+
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|61|143||[크리스피드](https://www.jobkorea.co.kr/Recruit/GI_Read/44566787?Oem_Code=C1&sc=7) ||송파, 웹개발자|📤 서류제출|||
+|62|144|2024 06 23|[천재교과서](https://www.jobkorea.co.kr/Recruit/OnPass/OnPassResult?gNo=44538065&R_No=25480631&PartIdx=35229570&sc=7) ||백엔드|📤 서류제출|||
+|63|145|2024 05 21|[신라 스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/44483947?Oem_Code=C1&sc=7) ||전산|📤 서류제출|||
+|64|146|2024 05 08|[현대HT](https://www.jobkorea.co.kr/Recruit/GI_Read/44437247?Oem_Code=C1&sc=7) ||백엔드|📤 서류제출|||
+|65|147|2024 05 16|[NHNKPC](https://www.jobkorea.co.kr/Recruit/GI_Read/44471646?Oem_Code=C1&sc=7) ||SI JAVA|📤 서류제출|||
+|-|148||[신세계 아이엔씨](https://shinsegaeinc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=179410) ||자바? 이커머스? 3~7년 경력이네 ㅅㅂ|❌ 미지원|||
+|66|149||[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/44471143?Oem_Code=C1) ||프론트엔드, 최소 2넌|📤 서류제출|||
+|67|150|2024 06 04|[넛지 헬스케어](https://www.jobkorea.co.kr/Recruit/GI_Read/44396547?Oem_Code=C1) ||코테, 캐시워크 next.js|📤 서류제출|||
+|68|151|2024 06 11|[위시정보기술](https://www.jobkorea.co.kr/Recruit/GI_Read/44448209?Oem_Code=C1) ||서울력 이마트 next.js, 경력 3년|📤 서류제출|||
+|-|152|2024 05 03|[캐롯손해보험](https://career.carrotins.com/opening) ||it개발, 경력 7년이네 ㅂㅅ|❌ 미지원|||
+|69|153|2024 05 15|[한국자격검정평가진흥원](https://www.jobkorea.co.kr/Recruit/GI_Read/44459315?Oem_Code=C1&sc=26) ||웹퍼블리셔 경력 2년|📤 서류제출|||
+|70|154|2024 05 10|[에스엠인터네셔널](https://www.jobkorea.co.kr/Recruit/GI_Read/44444050?Oem_Code=C1&sc=26) ||디저트39 웹앱 서비스 기획|📤 서류제출|||
+
+
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+|71|155|2024 07 02|[엠게임](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44609800?Oem_Code=C1) ||웹개발자|📤 서류제출|||
+|72|156|2024 06 10|[누리플러스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604410?Oem_Code=C1) ||소프트웨어 개발|📤 서류제출|||
+|73|157||[SK 쉴더스](https://www.jobkorea.co.kr/Recruit/Booth_GI_Read/44604137?Oem_Code=C1) ||프론트엔드 경력 2년||||
+
+
+
+
+
+
+
+
+
+
+|||2024 05 06|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/44524415?Oem_Code=C1&sc=7) ||||||
+
+|||2024 05 05|[현대자동차 GIT](https://www.jobkorea.co.kr/Recruit/GI_Read/44531120?Oem_Code=C1&sc=7) ||||||
+
+|||2024 05 16|[케이뱅크](https://inthiswork.com/archives/118787) ||프론트엔드||||
+
 |||상시|[카페24](https://www.jobkorea.co.kr/Recruit/GI_Read/44457247?Oem_Code=C1&sc=15) ||||||
 
+|||2024 05 06|[아시아나IDT](https://asianaidt.recruiter.co.kr/appsite/company/index) ||시스템 운영, 경력2년||||
 
+|||2024 05 05|[투비소프트](https://www.jobkorea.co.kr/Recruit/GI_Read/44395286?Oem_Code=C1&sc=15) ||이커머스||||
+|||2024 05 06|[경동나비엔](https://recruit.kdfamily.co.kr/) ||R&D IOT 서버 백엔드, 구로||||
 
-|||2024 04 28|[웅진](https://woongjinit-recruiter.career.greetinghr.com/) ||java 개발||||
-|||2024 04 28|[인바디](https://www.inbodyrecruit.com/) ||AOS||||
-|||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695?utm_source=jasoseol&utm_medium=banner&utm_campaign=2404hdclabs) ||라눅스 인프라개발 및 운영 부문||||
+|||2024 05 06|[이랜드 이노플](https://careers.eland.co.kr/announce/recruit/hxCcG2wOtfklvYj5Zmea5XtMDw8P) ||외식 시스템 개발 및 운영||||
 
-
-|||2024 04 30|[HDC랩스](https://hdc-labs.recruiter.co.kr/career/jobs/16695) ||리눅스 인프라 개발 및 운영 부문||||
-|||2024 05 02|[동원그룹](https://careers.dongwon.com/Recruit/Detail/1294538?p=iyNfKrdnmP2qvRp8eLoBoZUpoAd7oXoMRF~univ~qHHbyt3iKt8daueOf4L73r4u/JYOmXuNw3JjRTEtpR5tnhbU~univ~CWg0nAO5i9tIT7P0kOt6hpLUYDNquLubJDLueuz0tviL1oUDuAe4GPRhG1jVAiqBdQTYBGNx8CwtJirbzXrwGnM=) ||웹개발||||
-|||2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||||||
 |||2024 05 06|[이지케어택](https://ezcaretech.career.greetinghr.com/o/109146) ||||||
+|||2024 05 06|[슈피겐 코리아](https://career.spigenkorea.co.kr/) ||웹개발||||
+
+|||2024 05 07|[한국예탁결제원](https://ksd.saramin.co.kr/service/ksd/3136/applicant/apply/recruit_default.asp) ||IT||||
+|||2024 05 07|[NH투자증권](https://nhqv-recruit2024.com/?utm_source=jas01&utm_campaign=nh2024up) ||||||
+|||2024 05 07|[선진](https://recruit-sj.com/?utm_source=jasoseol&utm_medium=recruit_banner&utm_campaign=202401) ||웹개발||||
+
 
 |||2024 05 10|[드림라인](https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=47975816&view_type=etc&ref=recruit_manage) ||클라우드 엔지니어, 웹이 있음||||
+|||2024 05 10|[LX MMA](https://apply.lxcareers.com/app/job/RetrieveJobNoticesDetail.rpi?jobNoticeId=16128) ||it infra||||
+
+|||2024 05 14|[한국투자증권](https://career.koreainvestment.com/announcementList) ||||||
+
+|||2024 05 12|[세아상역](https://careers.sae-a.com/) ||IT||||
+
+|||2024 05 12|[휠라 홀딩스](https://www.filaholdings.com/kr/main/index.asp) ||웹개발||||
+|||2024 05 12|[MBC](https://imbc.career.greetinghr.com/recruit) ||웹서버 개발||||
+|||2024 05 22|[AJ네트워크](https://ajnet.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=180280) ||경력 3년||||
+
+
+
+
 
 # 상시
 |||상시|[티맥스소프트](https://tmaxcareers.ninehire.site/job_posting/CpR2rGZL) |대|3D App Back-End 연구원||||
@@ -193,9 +274,18 @@
 
 
 
-||||[카페24](https://www.cafe24corp.com/recruit/jobs) ||||||
 
-|||2024 05 07|[선진]() ||웹개발||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
+||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
 ||||[]() ||||||
